--- a/covet/src/github.com/johnstarich/go/covet/chunks_test.go.html
+++ b/covet/src/github.com/johnstarich/go/covet/chunks_test.go.html
@@ -67,157 +67,165 @@
 <span id="L10" class="ln">    10  </span>)
 <span id="L11" class="ln">    11  </span>
 <span id="L12" class="ln">    12  </span>func TestFileFindContextSpans(t *testing.T) {
-<span id="L13" class="ln">    13  </span>	for _, tc := range []struct {
-<span id="L14" class="ln">    14  </span>		description  string
-<span id="L15" class="ln">    15  </span>		file         File
-<span id="L16" class="ln">    16  </span>		contextLines uint
-<span id="L17" class="ln">    17  </span>		expectSpans  []span.Span
-<span id="L18" class="ln">    18  </span>	}{
-<span id="L19" class="ln">    19  </span>		{
-<span id="L20" class="ln">    20  </span>			description: &#34;no lines&#34;,
-<span id="L21" class="ln">    21  </span>		},
-<span id="L22" class="ln">    22  </span>		{
-<span id="L23" class="ln">    23  </span>			description: &#34;1 line, 0 context&#34;,
-<span id="L24" class="ln">    24  </span>			file: File{Lines: []Line{
-<span id="L25" class="ln">    25  </span>				{LineNumber: 1},
-<span id="L26" class="ln">    26  </span>			}},
-<span id="L27" class="ln">    27  </span>			expectSpans: []span.Span{
-<span id="L28" class="ln">    28  </span>				{Start: 1, End: 2},
-<span id="L29" class="ln">    29  </span>			},
-<span id="L30" class="ln">    30  </span>		},
-<span id="L31" class="ln">    31  </span>		{
-<span id="L32" class="ln">    32  </span>			description: &#34;2 adjacent lines, 0 context&#34;,
-<span id="L33" class="ln">    33  </span>			file: File{Lines: []Line{
-<span id="L34" class="ln">    34  </span>				{LineNumber: 1},
-<span id="L35" class="ln">    35  </span>				{LineNumber: 2},
-<span id="L36" class="ln">    36  </span>			}},
-<span id="L37" class="ln">    37  </span>			expectSpans: []span.Span{
-<span id="L38" class="ln">    38  </span>				{Start: 1, End: 2},
-<span id="L39" class="ln">    39  </span>				{Start: 2, End: 3},
-<span id="L40" class="ln">    40  </span>			},
-<span id="L41" class="ln">    41  </span>		},
-<span id="L42" class="ln">    42  </span>		{
-<span id="L43" class="ln">    43  </span>			description: &#34;2 disjoint lines, 0 context&#34;,
-<span id="L44" class="ln">    44  </span>			file: File{Lines: []Line{
-<span id="L45" class="ln">    45  </span>				{LineNumber: 1},
-<span id="L46" class="ln">    46  </span>				{LineNumber: 3},
-<span id="L47" class="ln">    47  </span>			}},
-<span id="L48" class="ln">    48  </span>			expectSpans: []span.Span{
-<span id="L49" class="ln">    49  </span>				{Start: 1, End: 2},
-<span id="L50" class="ln">    50  </span>				{Start: 3, End: 4},
-<span id="L51" class="ln">    51  </span>			},
-<span id="L52" class="ln">    52  </span>		},
-<span id="L53" class="ln">    53  </span>		{
-<span id="L54" class="ln">    54  </span>			description: &#34;2 disjoint lines, 2 context&#34;,
-<span id="L55" class="ln">    55  </span>			file: File{Lines: []Line{
-<span id="L56" class="ln">    56  </span>				{LineNumber: 1},
-<span id="L57" class="ln">    57  </span>				{LineNumber: 3},
-<span id="L58" class="ln">    58  </span>			}},
-<span id="L59" class="ln">    59  </span>			contextLines: 2,
-<span id="L60" class="ln">    60  </span>			expectSpans: []span.Span{
-<span id="L61" class="ln">    61  </span>				{Start: 1, End: 6},
-<span id="L62" class="ln">    62  </span>			},
-<span id="L63" class="ln">    63  </span>		},
-<span id="L64" class="ln">    64  </span>		{
-<span id="L65" class="ln">    65  </span>			description: &#34;2 adjacent lines, 1 disjoint line, 0 context&#34;,
-<span id="L66" class="ln">    66  </span>			file: File{Lines: []Line{
-<span id="L67" class="ln">    67  </span>				{LineNumber: 1},
-<span id="L68" class="ln">    68  </span>				{LineNumber: 2},
-<span id="L69" class="ln">    69  </span>				{LineNumber: 4},
-<span id="L70" class="ln">    70  </span>			}},
-<span id="L71" class="ln">    71  </span>			expectSpans: []span.Span{
-<span id="L72" class="ln">    72  </span>				{Start: 1, End: 2},
-<span id="L73" class="ln">    73  </span>				{Start: 2, End: 3},
-<span id="L74" class="ln">    74  </span>				{Start: 4, End: 5},
-<span id="L75" class="ln">    75  </span>			},
-<span id="L76" class="ln">    76  </span>		},
-<span id="L77" class="ln">    77  </span>		{
-<span id="L78" class="ln">    78  </span>			description: &#34;2 adjacent lines, 2 disjoint lines, 1 context&#34;,
-<span id="L79" class="ln">    79  </span>			file: File{Lines: []Line{
-<span id="L80" class="ln">    80  </span>				{LineNumber: 1},
-<span id="L81" class="ln">    81  </span>				{LineNumber: 2},
-<span id="L82" class="ln">    82  </span>				{LineNumber: 4},
-<span id="L83" class="ln">    83  </span>				{LineNumber: 7},
-<span id="L84" class="ln">    84  </span>			}},
-<span id="L85" class="ln">    85  </span>			contextLines: 1,
-<span id="L86" class="ln">    86  </span>			expectSpans: []span.Span{
-<span id="L87" class="ln">    87  </span>				{Start: 1, End: 6},
-<span id="L88" class="ln">    88  </span>				{Start: 6, End: 9},
-<span id="L89" class="ln">    89  </span>			},
-<span id="L90" class="ln">    90  </span>		},
-<span id="L91" class="ln">    91  </span>	} {
-<span id="L92" class="ln">    92  </span>		t.Run(tc.description, func(t *testing.T) {
-<span id="L93" class="ln">    93  </span>			spans := tc.file.findContextSpans(tc.contextLines)
-<span id="L94" class="ln">    94  </span>			assert.Equal(t, tc.expectSpans, spans)
-<span id="L95" class="ln">    95  </span>		})
-<span id="L96" class="ln">    96  </span>	}
-<span id="L97" class="ln">    97  </span>}
-<span id="L98" class="ln">    98  </span>
-<span id="L99" class="ln">    99  </span>func TestDiffChunks(t *testing.T) {
-<span id="L100" class="ln">   100  </span>	diff := strings.TrimSpace(`
-<span id="L101" class="ln">   101  </span>1: first line
-<span id="L102" class="ln">   102  </span>2:
-<span id="L103" class="ln">   103  </span>3:
-<span id="L104" class="ln">   104  </span>4:
-<span id="L105" class="ln">   105  </span>5:
-<span id="L106" class="ln">   106  </span>6:
-<span id="L107" class="ln">   107  </span>7:
-<span id="L108" class="ln">   108  </span>8: last line
-<span id="L109" class="ln">   109  </span>`)
-<span id="L110" class="ln">   110  </span>	file := File{
-<span id="L111" class="ln">   111  </span>		Lines: []Line{
-<span id="L112" class="ln">   112  </span>			{LineNumber: 5, Covered: true},
-<span id="L113" class="ln">   113  </span>			{LineNumber: 8, Covered: false},
-<span id="L114" class="ln">   114  </span>		},
-<span id="L115" class="ln">   115  </span>	}
-<span id="L116" class="ln">   116  </span>	chunks, err := DiffChunks(file, strings.NewReader(diff))
-<span id="L117" class="ln">   117  </span>	assert.NoError(t, err)
-<span id="L118" class="ln">   118  </span>	assert.Equal(t, []DiffChunk{
-<span id="L119" class="ln">   119  </span>		{
-<span id="L120" class="ln">   120  </span>			FirstLine: 3,
-<span id="L121" class="ln">   121  </span>			LastLine:  8,
-<span id="L122" class="ln">   122  </span>			Lines: []string{
-<span id="L123" class="ln">   123  </span>				&#34; 3:&#34;,
-<span id="L124" class="ln">   124  </span>				&#34; 4:&#34;,
-<span id="L125" class="ln">   125  </span>				&#34;+5:&#34;,
-<span id="L126" class="ln">   126  </span>				&#34; 6:&#34;,
-<span id="L127" class="ln">   127  </span>				&#34; 7:&#34;,
-<span id="L128" class="ln">   128  </span>				&#34;-8: last line&#34;,
-<span id="L129" class="ln">   129  </span>			},
-<span id="L130" class="ln">   130  </span>		},
-<span id="L131" class="ln">   131  </span>	}, chunks)
-<span id="L132" class="ln">   132  </span>}
-<span id="L133" class="ln">   133  </span>
-<span id="L134" class="ln">   134  </span>func TestLineIterator(t *testing.T) {
-<span id="L135" class="ln">   135  </span>	const threeLines = `line 1
-<span id="L136" class="ln">   136  </span>line 2
-<span id="L137" class="ln">   137  </span>line 3
-<span id="L138" class="ln">   138  </span>`
-<span id="L139" class="ln">   139  </span>	t.Run(&#34;skip and next&#34;, func(t *testing.T) {
-<span id="L140" class="ln">   140  </span>		li := newLineIterator(strings.NewReader(threeLines))
-<span id="L141" class="ln">   141  </span>		require.NoError(t, li.SkipLines(1))
-<span id="L142" class="ln">   142  </span>		lines, err := li.NextLines(1)
-<span id="L143" class="ln">   143  </span>		require.NoError(t, err)
-<span id="L144" class="ln">   144  </span>		assert.Equal(t, []string{&#34;line 2&#34;}, lines)
-<span id="L145" class="ln">   145  </span>	})
-<span id="L146" class="ln">   146  </span>
-<span id="L147" class="ln">   147  </span>	t.Run(&#34;skip past end&#34;, func(t *testing.T) {
-<span id="L148" class="ln">   148  </span>		li := newLineIterator(strings.NewReader(threeLines))
-<span id="L149" class="ln">   149  </span>		assert.NoError(t, li.SkipLines(4))
-<span id="L150" class="ln">   150  </span>	})
-<span id="L151" class="ln">   151  </span>
-<span id="L152" class="ln">   152  </span>	t.Run(&#34;read past end&#34;, func(t *testing.T) {
-<span id="L153" class="ln">   153  </span>		li := newLineIterator(strings.NewReader(threeLines))
-<span id="L154" class="ln">   154  </span>		lines, err := li.NextLines(4)
-<span id="L155" class="ln">   155  </span>		assert.NoError(t, err)
-<span id="L156" class="ln">   156  </span>		assert.Equal(t, []string{
-<span id="L157" class="ln">   157  </span>			&#34;line 1&#34;,
-<span id="L158" class="ln">   158  </span>			&#34;line 2&#34;,
-<span id="L159" class="ln">   159  </span>			&#34;line 3&#34;,
-<span id="L160" class="ln">   160  </span>		}, lines)
-<span id="L161" class="ln">   161  </span>	})
-<span id="L162" class="ln">   162  </span>}
-<span id="L163" class="ln">   163  </span>
+<span id="L13" class="ln">    13  </span>	t.Parallel()
+<span id="L14" class="ln">    14  </span>	for _, tc := range []struct {
+<span id="L15" class="ln">    15  </span>		description  string
+<span id="L16" class="ln">    16  </span>		file         File
+<span id="L17" class="ln">    17  </span>		contextLines uint
+<span id="L18" class="ln">    18  </span>		expectSpans  []span.Span
+<span id="L19" class="ln">    19  </span>	}{
+<span id="L20" class="ln">    20  </span>		{
+<span id="L21" class="ln">    21  </span>			description: &#34;no lines&#34;,
+<span id="L22" class="ln">    22  </span>		},
+<span id="L23" class="ln">    23  </span>		{
+<span id="L24" class="ln">    24  </span>			description: &#34;1 line, 0 context&#34;,
+<span id="L25" class="ln">    25  </span>			file: File{Lines: []Line{
+<span id="L26" class="ln">    26  </span>				{LineNumber: 1},
+<span id="L27" class="ln">    27  </span>			}},
+<span id="L28" class="ln">    28  </span>			expectSpans: []span.Span{
+<span id="L29" class="ln">    29  </span>				{Start: 1, End: 2},
+<span id="L30" class="ln">    30  </span>			},
+<span id="L31" class="ln">    31  </span>		},
+<span id="L32" class="ln">    32  </span>		{
+<span id="L33" class="ln">    33  </span>			description: &#34;2 adjacent lines, 0 context&#34;,
+<span id="L34" class="ln">    34  </span>			file: File{Lines: []Line{
+<span id="L35" class="ln">    35  </span>				{LineNumber: 1},
+<span id="L36" class="ln">    36  </span>				{LineNumber: 2},
+<span id="L37" class="ln">    37  </span>			}},
+<span id="L38" class="ln">    38  </span>			expectSpans: []span.Span{
+<span id="L39" class="ln">    39  </span>				{Start: 1, End: 2},
+<span id="L40" class="ln">    40  </span>				{Start: 2, End: 3},
+<span id="L41" class="ln">    41  </span>			},
+<span id="L42" class="ln">    42  </span>		},
+<span id="L43" class="ln">    43  </span>		{
+<span id="L44" class="ln">    44  </span>			description: &#34;2 disjoint lines, 0 context&#34;,
+<span id="L45" class="ln">    45  </span>			file: File{Lines: []Line{
+<span id="L46" class="ln">    46  </span>				{LineNumber: 1},
+<span id="L47" class="ln">    47  </span>				{LineNumber: 3},
+<span id="L48" class="ln">    48  </span>			}},
+<span id="L49" class="ln">    49  </span>			expectSpans: []span.Span{
+<span id="L50" class="ln">    50  </span>				{Start: 1, End: 2},
+<span id="L51" class="ln">    51  </span>				{Start: 3, End: 4},
+<span id="L52" class="ln">    52  </span>			},
+<span id="L53" class="ln">    53  </span>		},
+<span id="L54" class="ln">    54  </span>		{
+<span id="L55" class="ln">    55  </span>			description: &#34;2 disjoint lines, 2 context&#34;,
+<span id="L56" class="ln">    56  </span>			file: File{Lines: []Line{
+<span id="L57" class="ln">    57  </span>				{LineNumber: 1},
+<span id="L58" class="ln">    58  </span>				{LineNumber: 3},
+<span id="L59" class="ln">    59  </span>			}},
+<span id="L60" class="ln">    60  </span>			contextLines: 2,
+<span id="L61" class="ln">    61  </span>			expectSpans: []span.Span{
+<span id="L62" class="ln">    62  </span>				{Start: 1, End: 6},
+<span id="L63" class="ln">    63  </span>			},
+<span id="L64" class="ln">    64  </span>		},
+<span id="L65" class="ln">    65  </span>		{
+<span id="L66" class="ln">    66  </span>			description: &#34;2 adjacent lines, 1 disjoint line, 0 context&#34;,
+<span id="L67" class="ln">    67  </span>			file: File{Lines: []Line{
+<span id="L68" class="ln">    68  </span>				{LineNumber: 1},
+<span id="L69" class="ln">    69  </span>				{LineNumber: 2},
+<span id="L70" class="ln">    70  </span>				{LineNumber: 4},
+<span id="L71" class="ln">    71  </span>			}},
+<span id="L72" class="ln">    72  </span>			expectSpans: []span.Span{
+<span id="L73" class="ln">    73  </span>				{Start: 1, End: 2},
+<span id="L74" class="ln">    74  </span>				{Start: 2, End: 3},
+<span id="L75" class="ln">    75  </span>				{Start: 4, End: 5},
+<span id="L76" class="ln">    76  </span>			},
+<span id="L77" class="ln">    77  </span>		},
+<span id="L78" class="ln">    78  </span>		{
+<span id="L79" class="ln">    79  </span>			description: &#34;2 adjacent lines, 2 disjoint lines, 1 context&#34;,
+<span id="L80" class="ln">    80  </span>			file: File{Lines: []Line{
+<span id="L81" class="ln">    81  </span>				{LineNumber: 1},
+<span id="L82" class="ln">    82  </span>				{LineNumber: 2},
+<span id="L83" class="ln">    83  </span>				{LineNumber: 4},
+<span id="L84" class="ln">    84  </span>				{LineNumber: 7},
+<span id="L85" class="ln">    85  </span>			}},
+<span id="L86" class="ln">    86  </span>			contextLines: 1,
+<span id="L87" class="ln">    87  </span>			expectSpans: []span.Span{
+<span id="L88" class="ln">    88  </span>				{Start: 1, End: 6},
+<span id="L89" class="ln">    89  </span>				{Start: 6, End: 9},
+<span id="L90" class="ln">    90  </span>			},
+<span id="L91" class="ln">    91  </span>		},
+<span id="L92" class="ln">    92  </span>	} {
+<span id="L93" class="ln">    93  </span>		tc := tc <span class="comment">// enable parallel sub-tests</span>
+<span id="L94" class="ln">    94  </span>		t.Run(tc.description, func(t *testing.T) {
+<span id="L95" class="ln">    95  </span>			t.Parallel()
+<span id="L96" class="ln">    96  </span>			spans := tc.file.findContextSpans(tc.contextLines)
+<span id="L97" class="ln">    97  </span>			assert.Equal(t, tc.expectSpans, spans)
+<span id="L98" class="ln">    98  </span>		})
+<span id="L99" class="ln">    99  </span>	}
+<span id="L100" class="ln">   100  </span>}
+<span id="L101" class="ln">   101  </span>
+<span id="L102" class="ln">   102  </span>func TestDiffChunks(t *testing.T) {
+<span id="L103" class="ln">   103  </span>	t.Parallel()
+<span id="L104" class="ln">   104  </span>	diff := strings.TrimSpace(`
+<span id="L105" class="ln">   105  </span>1: first line
+<span id="L106" class="ln">   106  </span>2:
+<span id="L107" class="ln">   107  </span>3:
+<span id="L108" class="ln">   108  </span>4:
+<span id="L109" class="ln">   109  </span>5:
+<span id="L110" class="ln">   110  </span>6:
+<span id="L111" class="ln">   111  </span>7:
+<span id="L112" class="ln">   112  </span>8: last line
+<span id="L113" class="ln">   113  </span>`)
+<span id="L114" class="ln">   114  </span>	file := File{
+<span id="L115" class="ln">   115  </span>		Lines: []Line{
+<span id="L116" class="ln">   116  </span>			{LineNumber: 5, Covered: true},
+<span id="L117" class="ln">   117  </span>			{LineNumber: 8, Covered: false},
+<span id="L118" class="ln">   118  </span>		},
+<span id="L119" class="ln">   119  </span>	}
+<span id="L120" class="ln">   120  </span>	chunks, err := DiffChunks(file, strings.NewReader(diff))
+<span id="L121" class="ln">   121  </span>	assert.NoError(t, err)
+<span id="L122" class="ln">   122  </span>	assert.Equal(t, []DiffChunk{
+<span id="L123" class="ln">   123  </span>		{
+<span id="L124" class="ln">   124  </span>			FirstLine: 3,
+<span id="L125" class="ln">   125  </span>			LastLine:  8,
+<span id="L126" class="ln">   126  </span>			Lines: []string{
+<span id="L127" class="ln">   127  </span>				&#34; 3:&#34;,
+<span id="L128" class="ln">   128  </span>				&#34; 4:&#34;,
+<span id="L129" class="ln">   129  </span>				&#34;+5:&#34;,
+<span id="L130" class="ln">   130  </span>				&#34; 6:&#34;,
+<span id="L131" class="ln">   131  </span>				&#34; 7:&#34;,
+<span id="L132" class="ln">   132  </span>				&#34;-8: last line&#34;,
+<span id="L133" class="ln">   133  </span>			},
+<span id="L134" class="ln">   134  </span>		},
+<span id="L135" class="ln">   135  </span>	}, chunks)
+<span id="L136" class="ln">   136  </span>}
+<span id="L137" class="ln">   137  </span>
+<span id="L138" class="ln">   138  </span>func TestLineIterator(t *testing.T) {
+<span id="L139" class="ln">   139  </span>	t.Parallel()
+<span id="L140" class="ln">   140  </span>	const threeLines = `line 1
+<span id="L141" class="ln">   141  </span>line 2
+<span id="L142" class="ln">   142  </span>line 3
+<span id="L143" class="ln">   143  </span>`
+<span id="L144" class="ln">   144  </span>	t.Run(&#34;skip and next&#34;, func(t *testing.T) {
+<span id="L145" class="ln">   145  </span>		t.Parallel()
+<span id="L146" class="ln">   146  </span>		li := newLineIterator(strings.NewReader(threeLines))
+<span id="L147" class="ln">   147  </span>		require.NoError(t, li.SkipLines(1))
+<span id="L148" class="ln">   148  </span>		lines, err := li.NextLines(1)
+<span id="L149" class="ln">   149  </span>		require.NoError(t, err)
+<span id="L150" class="ln">   150  </span>		assert.Equal(t, []string{&#34;line 2&#34;}, lines)
+<span id="L151" class="ln">   151  </span>	})
+<span id="L152" class="ln">   152  </span>
+<span id="L153" class="ln">   153  </span>	t.Run(&#34;skip past end&#34;, func(t *testing.T) {
+<span id="L154" class="ln">   154  </span>		t.Parallel()
+<span id="L155" class="ln">   155  </span>		li := newLineIterator(strings.NewReader(threeLines))
+<span id="L156" class="ln">   156  </span>		assert.NoError(t, li.SkipLines(4))
+<span id="L157" class="ln">   157  </span>	})
+<span id="L158" class="ln">   158  </span>
+<span id="L159" class="ln">   159  </span>	t.Run(&#34;read past end&#34;, func(t *testing.T) {
+<span id="L160" class="ln">   160  </span>		t.Parallel()
+<span id="L161" class="ln">   161  </span>		li := newLineIterator(strings.NewReader(threeLines))
+<span id="L162" class="ln">   162  </span>		lines, err := li.NextLines(4)
+<span id="L163" class="ln">   163  </span>		assert.NoError(t, err)
+<span id="L164" class="ln">   164  </span>		assert.Equal(t, []string{
+<span id="L165" class="ln">   165  </span>			&#34;line 1&#34;,
+<span id="L166" class="ln">   166  </span>			&#34;line 2&#34;,
+<span id="L167" class="ln">   167  </span>			&#34;line 3&#34;,
+<span id="L168" class="ln">   168  </span>		}, lines)
+<span id="L169" class="ln">   169  </span>	})
+<span id="L170" class="ln">   170  </span>}
+<span id="L171" class="ln">   171  </span>
 </pre><p></p>
 
 <div id="footer">
