--- a/covet/src/github.com/johnstarich/go/covet/cmd/covet/github_comment_test.go.html
+++ b/covet/src/github.com/johnstarich/go/covet/cmd/covet/github_comment_test.go.html
@@ -71,82 +71,84 @@
 <span id="L14" class="ln">    14  </span>)
 <span id="L15" class="ln">    15  </span>
 <span id="L16" class="ln">    16  </span>func TestEnsureAppGitHubComment(t *testing.T) {
-<span id="L17" class="ln">    17  </span>	someCommentID := int64(1)
-<span id="L18" class="ln">    18  </span>	created := false
-<span id="L19" class="ln">    19  </span>	updated := false
-<span id="L20" class="ln">    20  </span>	server := httptest.NewServer(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-<span id="L21" class="ln">    21  </span>		switch fmt.Sprintf(&#34;%s:%s&#34;, r.Method, r.URL.Path) {
-<span id="L22" class="ln">    22  </span>		<span class="comment">// create new comment</span>
-<span id="L23" class="ln">    23  </span>		case &#34;GET:/api/v3/repos/my-bot/org/myrepo/issues/456/comments&#34;:
-<span id="L24" class="ln">    24  </span>			require.NoError(t, json.NewEncoder(w).Encode([]*github.IssueComment{}))
-<span id="L25" class="ln">    25  </span>		case &#34;POST:/api/v3/repos/my-bot/org/myrepo/issues/456/comments&#34;:
-<span id="L26" class="ln">    26  </span>			created = true
-<span id="L27" class="ln">    27  </span>			var comment github.IssueComment
-<span id="L28" class="ln">    28  </span>			require.NoError(t, json.NewDecoder(r.Body).Decode(&amp;comment))
-<span id="L29" class="ln">    29  </span>			assert.Equal(t, github.IssueComment{
-<span id="L30" class="ln">    30  </span>				Body: stringPtr(`&lt;!-- covet --&gt;
-<span id="L31" class="ln">    31  </span>
-<span id="L32" class="ln">    32  </span>some body`),
-<span id="L33" class="ln">    33  </span>			}, comment)
-<span id="L34" class="ln">    34  </span>			w.WriteHeader(http.StatusNoContent)
-<span id="L35" class="ln">    35  </span>
-<span id="L36" class="ln">    36  </span>		<span class="comment">// update existing comment</span>
-<span id="L37" class="ln">    37  </span>		case &#34;GET:/api/v3/repos/my-bot/org/myrepo/issues/123/comments&#34;:
-<span id="L38" class="ln">    38  </span>			require.NoError(t, json.NewEncoder(w).Encode([]*github.IssueComment{
-<span id="L39" class="ln">    39  </span>				{
-<span id="L40" class="ln">    40  </span>					ID: &amp;someCommentID,
-<span id="L41" class="ln">    41  </span>					Body: stringPtr(`&lt;!-- covet --&gt;
-<span id="L42" class="ln">    42  </span>
-<span id="L43" class="ln">    43  </span>some body`),
-<span id="L44" class="ln">    44  </span>				},
-<span id="L45" class="ln">    45  </span>			}))
-<span id="L46" class="ln">    46  </span>		case &#34;PATCH:/api/v3/repos/my-bot/org/myrepo/issues/comments/1&#34;:
-<span id="L47" class="ln">    47  </span>			updated = true
-<span id="L48" class="ln">    48  </span>			var comment github.IssueComment
-<span id="L49" class="ln">    49  </span>			require.NoError(t, json.NewDecoder(r.Body).Decode(&amp;comment))
-<span id="L50" class="ln">    50  </span>			assert.Equal(t, github.IssueComment{
-<span id="L51" class="ln">    51  </span>				Body: stringPtr(`&lt;!-- covet --&gt;
-<span id="L52" class="ln">    52  </span>
-<span id="L53" class="ln">    53  </span>some other body`),
-<span id="L54" class="ln">    54  </span>			}, comment)
-<span id="L55" class="ln">    55  </span>			w.WriteHeader(http.StatusNoContent)
-<span id="L56" class="ln">    56  </span>		default:
-<span id="L57" class="ln">    57  </span>			t.Fatal(&#34;Unknown request method and path:&#34;, r.Method, r.URL.Path)
-<span id="L58" class="ln">    58  </span>		}
-<span id="L59" class="ln">    59  </span>	}))
-<span id="L60" class="ln">    60  </span>	t.Cleanup(server.Close)
-<span id="L61" class="ln">    61  </span>
-<span id="L62" class="ln">    62  </span>	ctx := context.Background()
-<span id="L63" class="ln">    63  </span>	<span class="comment">// create new comment</span>
-<span id="L64" class="ln">    64  </span>	err := ensureAppGitHubComment(ctx, gitHubCommentOptions{
-<span id="L65" class="ln">    65  </span>		GitHubEndpoint: server.URL,
-<span id="L66" class="ln">    66  </span>		GitHubToken:    &#34;some-token&#34;,
-<span id="L67" class="ln">    67  </span>		RepoOwner:      &#34;my-bot&#34;,
-<span id="L68" class="ln">    68  </span>		Repo:           &#34;org/myrepo&#34;,
-<span id="L69" class="ln">    69  </span>		IssueNumber:    456,
-<span id="L70" class="ln">    70  </span>		Body:           &#34;some body&#34;,
-<span id="L71" class="ln">    71  </span>	})
-<span id="L72" class="ln">    72  </span>	assert.NoError(t, err)
-<span id="L73" class="ln">    73  </span>	assert.True(t, created)
-<span id="L74" class="ln">    74  </span>	<span class="comment">// update existing comment</span>
-<span id="L75" class="ln">    75  </span>	err = ensureAppGitHubComment(ctx, gitHubCommentOptions{
-<span id="L76" class="ln">    76  </span>		GitHubEndpoint: server.URL,
-<span id="L77" class="ln">    77  </span>		GitHubToken:    &#34;some-token&#34;,
-<span id="L78" class="ln">    78  </span>		RepoOwner:      &#34;my-bot&#34;,
-<span id="L79" class="ln">    79  </span>		Repo:           &#34;org/myrepo&#34;,
-<span id="L80" class="ln">    80  </span>		IssueNumber:    123,
-<span id="L81" class="ln">    81  </span>		Body:           &#34;some other body&#34;,
-<span id="L82" class="ln">    82  </span>	})
-<span id="L83" class="ln">    83  </span>	assert.NoError(t, err)
-<span id="L84" class="ln">    84  </span>	assert.True(t, updated)
-<span id="L85" class="ln">    85  </span>}
-<span id="L86" class="ln">    86  </span>
-<span id="L87" class="ln">    87  </span>func TestStringOrEmpty(t *testing.T) {
-<span id="L88" class="ln">    88  </span>	assert.Equal(t, &#34;&#34;, stringOrEmpty(nil))
-<span id="L89" class="ln">    89  </span>	s := &#34;foo&#34;
-<span id="L90" class="ln">    90  </span>	assert.Equal(t, s, stringOrEmpty(&amp;s))
-<span id="L91" class="ln">    91  </span>}
-<span id="L92" class="ln">    92  </span>
+<span id="L17" class="ln">    17  </span>	t.Parallel()
+<span id="L18" class="ln">    18  </span>	someCommentID := int64(1)
+<span id="L19" class="ln">    19  </span>	created := false
+<span id="L20" class="ln">    20  </span>	updated := false
+<span id="L21" class="ln">    21  </span>	server := httptest.NewServer(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+<span id="L22" class="ln">    22  </span>		switch fmt.Sprintf(&#34;%s:%s&#34;, r.Method, r.URL.Path) {
+<span id="L23" class="ln">    23  </span>		<span class="comment">// create new comment</span>
+<span id="L24" class="ln">    24  </span>		case &#34;GET:/api/v3/repos/my-bot/org/myrepo/issues/456/comments&#34;:
+<span id="L25" class="ln">    25  </span>			require.NoError(t, json.NewEncoder(w).Encode([]*github.IssueComment{}))
+<span id="L26" class="ln">    26  </span>		case &#34;POST:/api/v3/repos/my-bot/org/myrepo/issues/456/comments&#34;:
+<span id="L27" class="ln">    27  </span>			created = true
+<span id="L28" class="ln">    28  </span>			var comment github.IssueComment
+<span id="L29" class="ln">    29  </span>			require.NoError(t, json.NewDecoder(r.Body).Decode(&amp;comment))
+<span id="L30" class="ln">    30  </span>			assert.Equal(t, github.IssueComment{
+<span id="L31" class="ln">    31  </span>				Body: stringPtr(`&lt;!-- covet --&gt;
+<span id="L32" class="ln">    32  </span>
+<span id="L33" class="ln">    33  </span>some body`),
+<span id="L34" class="ln">    34  </span>			}, comment)
+<span id="L35" class="ln">    35  </span>			w.WriteHeader(http.StatusNoContent)
+<span id="L36" class="ln">    36  </span>
+<span id="L37" class="ln">    37  </span>		<span class="comment">// update existing comment</span>
+<span id="L38" class="ln">    38  </span>		case &#34;GET:/api/v3/repos/my-bot/org/myrepo/issues/123/comments&#34;:
+<span id="L39" class="ln">    39  </span>			require.NoError(t, json.NewEncoder(w).Encode([]*github.IssueComment{
+<span id="L40" class="ln">    40  </span>				{
+<span id="L41" class="ln">    41  </span>					ID: &amp;someCommentID,
+<span id="L42" class="ln">    42  </span>					Body: stringPtr(`&lt;!-- covet --&gt;
+<span id="L43" class="ln">    43  </span>
+<span id="L44" class="ln">    44  </span>some body`),
+<span id="L45" class="ln">    45  </span>				},
+<span id="L46" class="ln">    46  </span>			}))
+<span id="L47" class="ln">    47  </span>		case &#34;PATCH:/api/v3/repos/my-bot/org/myrepo/issues/comments/1&#34;:
+<span id="L48" class="ln">    48  </span>			updated = true
+<span id="L49" class="ln">    49  </span>			var comment github.IssueComment
+<span id="L50" class="ln">    50  </span>			require.NoError(t, json.NewDecoder(r.Body).Decode(&amp;comment))
+<span id="L51" class="ln">    51  </span>			assert.Equal(t, github.IssueComment{
+<span id="L52" class="ln">    52  </span>				Body: stringPtr(`&lt;!-- covet --&gt;
+<span id="L53" class="ln">    53  </span>
+<span id="L54" class="ln">    54  </span>some other body`),
+<span id="L55" class="ln">    55  </span>			}, comment)
+<span id="L56" class="ln">    56  </span>			w.WriteHeader(http.StatusNoContent)
+<span id="L57" class="ln">    57  </span>		default:
+<span id="L58" class="ln">    58  </span>			t.Fatal(&#34;Unknown request method and path:&#34;, r.Method, r.URL.Path)
+<span id="L59" class="ln">    59  </span>		}
+<span id="L60" class="ln">    60  </span>	}))
+<span id="L61" class="ln">    61  </span>	t.Cleanup(server.Close)
+<span id="L62" class="ln">    62  </span>
+<span id="L63" class="ln">    63  </span>	ctx := context.Background()
+<span id="L64" class="ln">    64  </span>	<span class="comment">// create new comment</span>
+<span id="L65" class="ln">    65  </span>	err := ensureAppGitHubComment(ctx, gitHubCommentOptions{
+<span id="L66" class="ln">    66  </span>		GitHubEndpoint: server.URL,
+<span id="L67" class="ln">    67  </span>		GitHubToken:    &#34;some-token&#34;,
+<span id="L68" class="ln">    68  </span>		RepoOwner:      &#34;my-bot&#34;,
+<span id="L69" class="ln">    69  </span>		Repo:           &#34;org/myrepo&#34;,
+<span id="L70" class="ln">    70  </span>		IssueNumber:    456,
+<span id="L71" class="ln">    71  </span>		Body:           &#34;some body&#34;,
+<span id="L72" class="ln">    72  </span>	})
+<span id="L73" class="ln">    73  </span>	assert.NoError(t, err)
+<span id="L74" class="ln">    74  </span>	assert.True(t, created)
+<span id="L75" class="ln">    75  </span>	<span class="comment">// update existing comment</span>
+<span id="L76" class="ln">    76  </span>	err = ensureAppGitHubComment(ctx, gitHubCommentOptions{
+<span id="L77" class="ln">    77  </span>		GitHubEndpoint: server.URL,
+<span id="L78" class="ln">    78  </span>		GitHubToken:    &#34;some-token&#34;,
+<span id="L79" class="ln">    79  </span>		RepoOwner:      &#34;my-bot&#34;,
+<span id="L80" class="ln">    80  </span>		Repo:           &#34;org/myrepo&#34;,
+<span id="L81" class="ln">    81  </span>		IssueNumber:    123,
+<span id="L82" class="ln">    82  </span>		Body:           &#34;some other body&#34;,
+<span id="L83" class="ln">    83  </span>	})
+<span id="L84" class="ln">    84  </span>	assert.NoError(t, err)
+<span id="L85" class="ln">    85  </span>	assert.True(t, updated)
+<span id="L86" class="ln">    86  </span>}
+<span id="L87" class="ln">    87  </span>
+<span id="L88" class="ln">    88  </span>func TestStringOrEmpty(t *testing.T) {
+<span id="L89" class="ln">    89  </span>	t.Parallel()
+<span id="L90" class="ln">    90  </span>	assert.Equal(t, &#34;&#34;, stringOrEmpty(nil))
+<span id="L91" class="ln">    91  </span>	s := &#34;foo&#34;
+<span id="L92" class="ln">    92  </span>	assert.Equal(t, s, stringOrEmpty(&amp;s))
+<span id="L93" class="ln">    93  </span>}
+<span id="L94" class="ln">    94  </span>
 </pre><p></p>
 
 <div id="footer">
