--- a/covet/src/github.com/johnstarich/go/covet/cmd/covet/main_test.go.html
+++ b/covet/src/github.com/johnstarich/go/covet/cmd/covet/main_test.go.html
@@ -81,21 +81,22 @@
 <span id="L24" class="ln">    24  </span>}
 <span id="L25" class="ln">    25  </span>
 <span id="L26" class="ln">    26  </span>func TestRunMain(t *testing.T) {
-<span id="L27" class="ln">    27  </span>	handlePanic(t, main, func(v interface{}) {
-<span id="L28" class="ln">    28  </span>		require.Implements(t, (*error)(nil), v)
-<span id="L29" class="ln">    29  </span>		err := v.(error)
-<span id="L30" class="ln">    30  </span>		assert.ErrorContains(t, err, &#34;exited with code 1&#34;)
-<span id="L31" class="ln">    31  </span>	})
-<span id="L32" class="ln">    32  </span>}
-<span id="L33" class="ln">    33  </span>
-<span id="L34" class="ln">    34  </span>func handlePanic(t *testing.T, fn func(), handler func(v interface{})) {
-<span id="L35" class="ln">    35  </span>	t.Helper()
-<span id="L36" class="ln">    36  </span>	defer func() {
-<span id="L37" class="ln">    37  </span>		handler(recover())
-<span id="L38" class="ln">    38  </span>	}()
-<span id="L39" class="ln">    39  </span>	fn()
-<span id="L40" class="ln">    40  </span>}
-<span id="L41" class="ln">    41  </span>
+<span id="L27" class="ln">    27  </span>	t.Parallel()
+<span id="L28" class="ln">    28  </span>	handlePanic(t, main, func(v interface{}) {
+<span id="L29" class="ln">    29  </span>		require.Implements(t, (*error)(nil), v)
+<span id="L30" class="ln">    30  </span>		err := v.(error)
+<span id="L31" class="ln">    31  </span>		assert.ErrorContains(t, err, &#34;exited with code 1&#34;)
+<span id="L32" class="ln">    32  </span>	})
+<span id="L33" class="ln">    33  </span>}
+<span id="L34" class="ln">    34  </span>
+<span id="L35" class="ln">    35  </span>func handlePanic(t *testing.T, fn func(), handler func(v interface{})) {
+<span id="L36" class="ln">    36  </span>	t.Helper()
+<span id="L37" class="ln">    37  </span>	defer func() {
+<span id="L38" class="ln">    38  </span>		handler(recover())
+<span id="L39" class="ln">    39  </span>	}()
+<span id="L40" class="ln">    40  </span>	fn()
+<span id="L41" class="ln">    41  </span>}
+<span id="L42" class="ln">    42  </span>
 </pre><p></p>
 
 <div id="footer">
