--- a/covet/src/github.com/johnstarich/go/covet/internal/fspath/fspath_test.go.html
+++ b/covet/src/github.com/johnstarich/go/covet/internal/fspath/fspath_test.go.html
@@ -70,98 +70,104 @@
 <span id="L13" class="ln">    13  </span>}
 <span id="L14" class="ln">    14  </span>
 <span id="L15" class="ln">    15  </span>func TestCommonBase(t *testing.T) {
-<span id="L16" class="ln">    16  </span>	for _, tc := range []struct {
-<span id="L17" class="ln">    17  </span>		a, b   string
-<span id="L18" class="ln">    18  </span>		expect string
-<span id="L19" class="ln">    19  </span>	}{
-<span id="L20" class="ln">    20  </span>		{
-<span id="L21" class="ln">    21  </span>			a:      &#34;a&#34;,
-<span id="L22" class="ln">    22  </span>			b:      &#34;a&#34;,
-<span id="L23" class="ln">    23  </span>			expect: &#34;a&#34;,
-<span id="L24" class="ln">    24  </span>		},
-<span id="L25" class="ln">    25  </span>		{
-<span id="L26" class="ln">    26  </span>			a:      &#34;a&#34;,
-<span id="L27" class="ln">    27  </span>			b:      &#34;b&#34;,
-<span id="L28" class="ln">    28  </span>			expect: &#34;.&#34;,
-<span id="L29" class="ln">    29  </span>		},
-<span id="L30" class="ln">    30  </span>		{
-<span id="L31" class="ln">    31  </span>			a:      &#34;a/b&#34;,
-<span id="L32" class="ln">    32  </span>			b:      &#34;a/c&#34;,
-<span id="L33" class="ln">    33  </span>			expect: &#34;a&#34;,
-<span id="L34" class="ln">    34  </span>		},
-<span id="L35" class="ln">    35  </span>		{
-<span id="L36" class="ln">    36  </span>			a:      &#34;a/b/c&#34;,
-<span id="L37" class="ln">    37  </span>			b:      &#34;a/b/d&#34;,
-<span id="L38" class="ln">    38  </span>			expect: &#34;a/b&#34;,
-<span id="L39" class="ln">    39  </span>		},
-<span id="L40" class="ln">    40  </span>	} {
-<span id="L41" class="ln">    41  </span>		t.Run(fmt.Sprintf(&#34;%s --&gt; %s&#34;, noSlashes(tc.a), noSlashes(tc.b)), func(t *testing.T) {
-<span id="L42" class="ln">    42  </span>			assert.Equal(t, tc.expect, CommonBase(tc.a, tc.b))
-<span id="L43" class="ln">    43  </span>		})
-<span id="L44" class="ln">    44  </span>	}
-<span id="L45" class="ln">    45  </span>}
-<span id="L46" class="ln">    46  </span>
-<span id="L47" class="ln">    47  </span>func TestRel(t *testing.T) {
-<span id="L48" class="ln">    48  </span>	for _, tc := range []struct {
-<span id="L49" class="ln">    49  </span>		basePath   string
-<span id="L50" class="ln">    50  </span>		targetPath string
-<span id="L51" class="ln">    51  </span>		expectPath string
-<span id="L52" class="ln">    52  </span>		expectErr  string
-<span id="L53" class="ln">    53  </span>	}{
-<span id="L54" class="ln">    54  </span>		{
-<span id="L55" class="ln">    55  </span>			basePath:   &#34;a&#34;,
-<span id="L56" class="ln">    56  </span>			targetPath: &#34;a&#34;,
-<span id="L57" class="ln">    57  </span>			expectPath: &#34;.&#34;,
-<span id="L58" class="ln">    58  </span>		},
-<span id="L59" class="ln">    59  </span>		{
-<span id="L60" class="ln">    60  </span>			basePath:   &#34;a&#34;,
-<span id="L61" class="ln">    61  </span>			targetPath: &#34;b&#34;,
-<span id="L62" class="ln">    62  </span>			expectPath: &#34;../b&#34;,
-<span id="L63" class="ln">    63  </span>		},
-<span id="L64" class="ln">    64  </span>		{
-<span id="L65" class="ln">    65  </span>			basePath:   &#34;a&#34;,
-<span id="L66" class="ln">    66  </span>			targetPath: &#34;a/b&#34;,
-<span id="L67" class="ln">    67  </span>			expectPath: &#34;b&#34;,
-<span id="L68" class="ln">    68  </span>		},
-<span id="L69" class="ln">    69  </span>		{
-<span id="L70" class="ln">    70  </span>			basePath:   &#34;a/b&#34;,
-<span id="L71" class="ln">    71  </span>			targetPath: &#34;a&#34;,
-<span id="L72" class="ln">    72  </span>			expectPath: &#34;..&#34;,
-<span id="L73" class="ln">    73  </span>		},
-<span id="L74" class="ln">    74  </span>		{
-<span id="L75" class="ln">    75  </span>			basePath:   &#34;a/b/c&#34;,
-<span id="L76" class="ln">    76  </span>			targetPath: &#34;a/b/c&#34;,
-<span id="L77" class="ln">    77  </span>			expectPath: &#34;.&#34;,
-<span id="L78" class="ln">    78  </span>		},
-<span id="L79" class="ln">    79  </span>		{
-<span id="L80" class="ln">    80  </span>			basePath:   &#34;a/b&#34;,
-<span id="L81" class="ln">    81  </span>			targetPath: &#34;a/b/c&#34;,
-<span id="L82" class="ln">    82  </span>			expectPath: &#34;c&#34;,
-<span id="L83" class="ln">    83  </span>		},
-<span id="L84" class="ln">    84  </span>		{
-<span id="L85" class="ln">    85  </span>			basePath:   &#34;a/b/c&#34;,
-<span id="L86" class="ln">    86  </span>			targetPath: &#34;a/b&#34;,
-<span id="L87" class="ln">    87  </span>			expectPath: &#34;..&#34;,
-<span id="L88" class="ln">    88  </span>		},
-<span id="L89" class="ln">    89  </span>		{
-<span id="L90" class="ln">    90  </span>			basePath:   &#34;a/b/c&#34;,
-<span id="L91" class="ln">    91  </span>			targetPath: &#34;a/b/d&#34;,
-<span id="L92" class="ln">    92  </span>			expectPath: &#34;../d&#34;,
-<span id="L93" class="ln">    93  </span>		},
-<span id="L94" class="ln">    94  </span>	} {
-<span id="L95" class="ln">    95  </span>		description := fmt.Sprintf(&#34;%s --&gt; %s&#34;, noSlashes(tc.basePath), noSlashes(tc.targetPath))
-<span id="L96" class="ln">    96  </span>		t.Run(description, func(t *testing.T) {
-<span id="L97" class="ln">    97  </span>			p, err := Rel(tc.basePath, tc.targetPath)
-<span id="L98" class="ln">    98  </span>			if tc.expectErr != &#34;&#34; {
-<span id="L99" class="ln">    99  </span>				assert.EqualError(t, err, tc.expectErr)
-<span id="L100" class="ln">   100  </span>				return
-<span id="L101" class="ln">   101  </span>			}
-<span id="L102" class="ln">   102  </span>			assert.NoError(t, err)
-<span id="L103" class="ln">   103  </span>			assert.Equal(t, tc.expectPath, p)
-<span id="L104" class="ln">   104  </span>		})
-<span id="L105" class="ln">   105  </span>	}
-<span id="L106" class="ln">   106  </span>}
-<span id="L107" class="ln">   107  </span>
+<span id="L16" class="ln">    16  </span>	t.Parallel()
+<span id="L17" class="ln">    17  </span>	for _, tc := range []struct {
+<span id="L18" class="ln">    18  </span>		a, b   string
+<span id="L19" class="ln">    19  </span>		expect string
+<span id="L20" class="ln">    20  </span>	}{
+<span id="L21" class="ln">    21  </span>		{
+<span id="L22" class="ln">    22  </span>			a:      &#34;a&#34;,
+<span id="L23" class="ln">    23  </span>			b:      &#34;a&#34;,
+<span id="L24" class="ln">    24  </span>			expect: &#34;a&#34;,
+<span id="L25" class="ln">    25  </span>		},
+<span id="L26" class="ln">    26  </span>		{
+<span id="L27" class="ln">    27  </span>			a:      &#34;a&#34;,
+<span id="L28" class="ln">    28  </span>			b:      &#34;b&#34;,
+<span id="L29" class="ln">    29  </span>			expect: &#34;.&#34;,
+<span id="L30" class="ln">    30  </span>		},
+<span id="L31" class="ln">    31  </span>		{
+<span id="L32" class="ln">    32  </span>			a:      &#34;a/b&#34;,
+<span id="L33" class="ln">    33  </span>			b:      &#34;a/c&#34;,
+<span id="L34" class="ln">    34  </span>			expect: &#34;a&#34;,
+<span id="L35" class="ln">    35  </span>		},
+<span id="L36" class="ln">    36  </span>		{
+<span id="L37" class="ln">    37  </span>			a:      &#34;a/b/c&#34;,
+<span id="L38" class="ln">    38  </span>			b:      &#34;a/b/d&#34;,
+<span id="L39" class="ln">    39  </span>			expect: &#34;a/b&#34;,
+<span id="L40" class="ln">    40  </span>		},
+<span id="L41" class="ln">    41  </span>	} {
+<span id="L42" class="ln">    42  </span>		tc := tc <span class="comment">// enable parallel sub-tests</span>
+<span id="L43" class="ln">    43  </span>		t.Run(fmt.Sprintf(&#34;%s --&gt; %s&#34;, noSlashes(tc.a), noSlashes(tc.b)), func(t *testing.T) {
+<span id="L44" class="ln">    44  </span>			t.Parallel()
+<span id="L45" class="ln">    45  </span>			assert.Equal(t, tc.expect, CommonBase(tc.a, tc.b))
+<span id="L46" class="ln">    46  </span>		})
+<span id="L47" class="ln">    47  </span>	}
+<span id="L48" class="ln">    48  </span>}
+<span id="L49" class="ln">    49  </span>
+<span id="L50" class="ln">    50  </span>func TestRel(t *testing.T) {
+<span id="L51" class="ln">    51  </span>	t.Parallel()
+<span id="L52" class="ln">    52  </span>	for _, tc := range []struct {
+<span id="L53" class="ln">    53  </span>		basePath   string
+<span id="L54" class="ln">    54  </span>		targetPath string
+<span id="L55" class="ln">    55  </span>		expectPath string
+<span id="L56" class="ln">    56  </span>		expectErr  string
+<span id="L57" class="ln">    57  </span>	}{
+<span id="L58" class="ln">    58  </span>		{
+<span id="L59" class="ln">    59  </span>			basePath:   &#34;a&#34;,
+<span id="L60" class="ln">    60  </span>			targetPath: &#34;a&#34;,
+<span id="L61" class="ln">    61  </span>			expectPath: &#34;.&#34;,
+<span id="L62" class="ln">    62  </span>		},
+<span id="L63" class="ln">    63  </span>		{
+<span id="L64" class="ln">    64  </span>			basePath:   &#34;a&#34;,
+<span id="L65" class="ln">    65  </span>			targetPath: &#34;b&#34;,
+<span id="L66" class="ln">    66  </span>			expectPath: &#34;../b&#34;,
+<span id="L67" class="ln">    67  </span>		},
+<span id="L68" class="ln">    68  </span>		{
+<span id="L69" class="ln">    69  </span>			basePath:   &#34;a&#34;,
+<span id="L70" class="ln">    70  </span>			targetPath: &#34;a/b&#34;,
+<span id="L71" class="ln">    71  </span>			expectPath: &#34;b&#34;,
+<span id="L72" class="ln">    72  </span>		},
+<span id="L73" class="ln">    73  </span>		{
+<span id="L74" class="ln">    74  </span>			basePath:   &#34;a/b&#34;,
+<span id="L75" class="ln">    75  </span>			targetPath: &#34;a&#34;,
+<span id="L76" class="ln">    76  </span>			expectPath: &#34;..&#34;,
+<span id="L77" class="ln">    77  </span>		},
+<span id="L78" class="ln">    78  </span>		{
+<span id="L79" class="ln">    79  </span>			basePath:   &#34;a/b/c&#34;,
+<span id="L80" class="ln">    80  </span>			targetPath: &#34;a/b/c&#34;,
+<span id="L81" class="ln">    81  </span>			expectPath: &#34;.&#34;,
+<span id="L82" class="ln">    82  </span>		},
+<span id="L83" class="ln">    83  </span>		{
+<span id="L84" class="ln">    84  </span>			basePath:   &#34;a/b&#34;,
+<span id="L85" class="ln">    85  </span>			targetPath: &#34;a/b/c&#34;,
+<span id="L86" class="ln">    86  </span>			expectPath: &#34;c&#34;,
+<span id="L87" class="ln">    87  </span>		},
+<span id="L88" class="ln">    88  </span>		{
+<span id="L89" class="ln">    89  </span>			basePath:   &#34;a/b/c&#34;,
+<span id="L90" class="ln">    90  </span>			targetPath: &#34;a/b&#34;,
+<span id="L91" class="ln">    91  </span>			expectPath: &#34;..&#34;,
+<span id="L92" class="ln">    92  </span>		},
+<span id="L93" class="ln">    93  </span>		{
+<span id="L94" class="ln">    94  </span>			basePath:   &#34;a/b/c&#34;,
+<span id="L95" class="ln">    95  </span>			targetPath: &#34;a/b/d&#34;,
+<span id="L96" class="ln">    96  </span>			expectPath: &#34;../d&#34;,
+<span id="L97" class="ln">    97  </span>		},
+<span id="L98" class="ln">    98  </span>	} {
+<span id="L99" class="ln">    99  </span>		description := fmt.Sprintf(&#34;%s --&gt; %s&#34;, noSlashes(tc.basePath), noSlashes(tc.targetPath))
+<span id="L100" class="ln">   100  </span>		tc := tc <span class="comment">// enable parallel sub-tests</span>
+<span id="L101" class="ln">   101  </span>		t.Run(description, func(t *testing.T) {
+<span id="L102" class="ln">   102  </span>			t.Parallel()
+<span id="L103" class="ln">   103  </span>			p, err := Rel(tc.basePath, tc.targetPath)
+<span id="L104" class="ln">   104  </span>			if tc.expectErr != &#34;&#34; {
+<span id="L105" class="ln">   105  </span>				assert.EqualError(t, err, tc.expectErr)
+<span id="L106" class="ln">   106  </span>				return
+<span id="L107" class="ln">   107  </span>			}
+<span id="L108" class="ln">   108  </span>			assert.NoError(t, err)
+<span id="L109" class="ln">   109  </span>			assert.Equal(t, tc.expectPath, p)
+<span id="L110" class="ln">   110  </span>		})
+<span id="L111" class="ln">   111  </span>	}
+<span id="L112" class="ln">   112  </span>}
+<span id="L113" class="ln">   113  </span>
 </pre><p></p>
 
 <div id="footer">
