--- a/covet/src/github.com/johnstarich/go/covet/internal/minmax/minmax_test.go.html
+++ b/covet/src/github.com/johnstarich/go/covet/internal/minmax/minmax_test.go.html
@@ -64,43 +64,45 @@
 <span id="L7" class="ln">     7  </span>)
 <span id="L8" class="ln">     8  </span>
 <span id="L9" class="ln">     9  </span>func TestMin(t *testing.T) {
-<span id="L10" class="ln">    10  </span>	testMin(t, &#34;int64&#34;, func(a, b int) int {
-<span id="L11" class="ln">    11  </span>		return int(MinInt64(int64(a), int64(b)))
-<span id="L12" class="ln">    12  </span>	})
-<span id="L13" class="ln">    13  </span>	testMin(t, &#34;uint&#34;, func(a, b int) int {
-<span id="L14" class="ln">    14  </span>		return int(MinUint(uint(a), uint(b)))
-<span id="L15" class="ln">    15  </span>	})
-<span id="L16" class="ln">    16  </span>	testMin(t, &#34;int&#34;, MinInt)
-<span id="L17" class="ln">    17  </span>}
-<span id="L18" class="ln">    18  </span>
-<span id="L19" class="ln">    19  </span>func TestMax(t *testing.T) {
-<span id="L20" class="ln">    20  </span>	testMax(t, &#34;int64&#34;, func(a, b int) int {
-<span id="L21" class="ln">    21  </span>		return int(MaxInt64(int64(a), int64(b)))
-<span id="L22" class="ln">    22  </span>	})
-<span id="L23" class="ln">    23  </span>	testMax(t, &#34;uint&#34;, func(a, b int) int {
-<span id="L24" class="ln">    24  </span>		return int(MaxUint(uint(a), uint(b)))
-<span id="L25" class="ln">    25  </span>	})
-<span id="L26" class="ln">    26  </span>	testMax(t, &#34;int&#34;, MaxInt)
-<span id="L27" class="ln">    27  </span>}
-<span id="L28" class="ln">    28  </span>
-<span id="L29" class="ln">    29  </span>func testMin(t *testing.T, description string, min func(a, b int) int) {
-<span id="L30" class="ln">    30  </span>	t.Helper()
-<span id="L31" class="ln">    31  </span>	t.Run(description, func(t *testing.T) {
-<span id="L32" class="ln">    32  </span>		assert.EqualValues(t, 1, min(1, 2))
-<span id="L33" class="ln">    33  </span>		assert.EqualValues(t, 1, min(2, 1))
-<span id="L34" class="ln">    34  </span>		assert.EqualValues(t, 0, min(0, 0))
-<span id="L35" class="ln">    35  </span>	})
-<span id="L36" class="ln">    36  </span>}
-<span id="L37" class="ln">    37  </span>
-<span id="L38" class="ln">    38  </span>func testMax(t *testing.T, description string, max func(a, b int) int) {
-<span id="L39" class="ln">    39  </span>	t.Helper()
-<span id="L40" class="ln">    40  </span>	t.Run(description, func(t *testing.T) {
-<span id="L41" class="ln">    41  </span>		assert.EqualValues(t, 2, max(1, 2))
-<span id="L42" class="ln">    42  </span>		assert.EqualValues(t, 2, max(2, 1))
-<span id="L43" class="ln">    43  </span>		assert.EqualValues(t, 0, max(0, 0))
-<span id="L44" class="ln">    44  </span>	})
-<span id="L45" class="ln">    45  </span>}
-<span id="L46" class="ln">    46  </span>
+<span id="L10" class="ln">    10  </span>	t.Parallel()
+<span id="L11" class="ln">    11  </span>	testMin(t, &#34;int64&#34;, func(a, b int) int {
+<span id="L12" class="ln">    12  </span>		return int(MinInt64(int64(a), int64(b)))
+<span id="L13" class="ln">    13  </span>	})
+<span id="L14" class="ln">    14  </span>	testMin(t, &#34;uint&#34;, func(a, b int) int {
+<span id="L15" class="ln">    15  </span>		return int(MinUint(uint(a), uint(b)))
+<span id="L16" class="ln">    16  </span>	})
+<span id="L17" class="ln">    17  </span>	testMin(t, &#34;int&#34;, MinInt)
+<span id="L18" class="ln">    18  </span>}
+<span id="L19" class="ln">    19  </span>
+<span id="L20" class="ln">    20  </span>func TestMax(t *testing.T) {
+<span id="L21" class="ln">    21  </span>	t.Parallel()
+<span id="L22" class="ln">    22  </span>	testMax(t, &#34;int64&#34;, func(a, b int) int {
+<span id="L23" class="ln">    23  </span>		return int(MaxInt64(int64(a), int64(b)))
+<span id="L24" class="ln">    24  </span>	})
+<span id="L25" class="ln">    25  </span>	testMax(t, &#34;uint&#34;, func(a, b int) int {
+<span id="L26" class="ln">    26  </span>		return int(MaxUint(uint(a), uint(b)))
+<span id="L27" class="ln">    27  </span>	})
+<span id="L28" class="ln">    28  </span>	testMax(t, &#34;int&#34;, MaxInt)
+<span id="L29" class="ln">    29  </span>}
+<span id="L30" class="ln">    30  </span>
+<span id="L31" class="ln">    31  </span>func testMin(t *testing.T, description string, min func(a, b int) int) {
+<span id="L32" class="ln">    32  </span>	t.Helper()
+<span id="L33" class="ln">    33  </span>	t.Run(description, func(t *testing.T) {
+<span id="L34" class="ln">    34  </span>		assert.EqualValues(t, 1, min(1, 2))
+<span id="L35" class="ln">    35  </span>		assert.EqualValues(t, 1, min(2, 1))
+<span id="L36" class="ln">    36  </span>		assert.EqualValues(t, 0, min(0, 0))
+<span id="L37" class="ln">    37  </span>	})
+<span id="L38" class="ln">    38  </span>}
+<span id="L39" class="ln">    39  </span>
+<span id="L40" class="ln">    40  </span>func testMax(t *testing.T, description string, max func(a, b int) int) {
+<span id="L41" class="ln">    41  </span>	t.Helper()
+<span id="L42" class="ln">    42  </span>	t.Run(description, func(t *testing.T) {
+<span id="L43" class="ln">    43  </span>		assert.EqualValues(t, 2, max(1, 2))
+<span id="L44" class="ln">    44  </span>		assert.EqualValues(t, 2, max(2, 1))
+<span id="L45" class="ln">    45  </span>		assert.EqualValues(t, 0, max(0, 0))
+<span id="L46" class="ln">    46  </span>	})
+<span id="L47" class="ln">    47  </span>}
+<span id="L48" class="ln">    48  </span>
 </pre><p></p>
 
 <div id="footer">
