--- a/gopages/src/github.com/johnstarich/go/gopages/cmd/exiter.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/cmd/exiter.go.html
@@ -59,32 +59,39 @@
 <span id="L2" class="ln">     2  </span>
 <span id="L3" class="ln">     3  </span>import (
 <span id="L4" class="ln">     4  </span>	&#34;os&#34;
-<span id="L5" class="ln">     5  </span>	&#34;testing&#34;
-<span id="L6" class="ln">     6  </span>
-<span id="L7" class="ln">     7  </span>	&#34;github.com/pkg/errors&#34;
-<span id="L8" class="ln">     8  </span>)
-<span id="L9" class="ln">     9  </span>
-<span id="L10" class="ln">    10  </span>const (
-<span id="L11" class="ln">    11  </span>	<span class="comment">// ExitCodeInvalidUsage is an exit code indicating invalid command line arguments were provided</span>
-<span id="L12" class="ln">    12  </span>	ExitCodeInvalidUsage = 2
-<span id="L13" class="ln">    13  </span>)
-<span id="L14" class="ln">    14  </span>
-<span id="L15" class="ln">    15  </span>var exiter = os.Exit <span class="comment">// nolint:gochecknoglobals // Enables os.Exit() to be swapped out in tests for a slightly safer variant. Required for sane test results in older Go versions.</span>
-<span id="L16" class="ln">    16  </span>
-<span id="L17" class="ln">    17  </span><span class="comment">// Exit runs os.Exit(). If SetupTestExiter() has been called, it panics instead.</span>
-<span id="L18" class="ln">    18  </span>func Exit(code int) {
-<span id="L19" class="ln">    19  </span>	exiter(code)
-<span id="L20" class="ln">    20  </span>}
+<span id="L5" class="ln">     5  </span>	&#34;sync&#34;
+<span id="L6" class="ln">     6  </span>	&#34;testing&#34;
+<span id="L7" class="ln">     7  </span>
+<span id="L8" class="ln">     8  </span>	&#34;github.com/pkg/errors&#34;
+<span id="L9" class="ln">     9  </span>)
+<span id="L10" class="ln">    10  </span>
+<span id="L11" class="ln">    11  </span>const (
+<span id="L12" class="ln">    12  </span>	<span class="comment">// ExitCodeInvalidUsage is an exit code indicating invalid command line arguments were provided</span>
+<span id="L13" class="ln">    13  </span>	ExitCodeInvalidUsage = 2
+<span id="L14" class="ln">    14  </span>)
+<span id="L15" class="ln">    15  </span>
+<span id="L16" class="ln">    16  </span><span class="comment">// nolint:gochecknoglobals // Enables os.Exit() to be swapped out in tests for a slightly safer variant. Required for sane test results in older Go versions.</span>
+<span id="L17" class="ln">    17  </span>var (
+<span id="L18" class="ln">    18  </span>	exiter          = os.Exit
+<span id="L19" class="ln">    19  </span>	setupExiterOnce sync.Once
+<span id="L20" class="ln">    20  </span>)
 <span id="L21" class="ln">    21  </span>
-<span id="L22" class="ln">    22  </span><span class="comment">// SetupTestExiter changes the exiter to panic instead of exiting</span>
-<span id="L23" class="ln">    23  </span>func SetupTestExiter(t *testing.T) {
-<span id="L24" class="ln">    24  </span>	<span class="comment">// require testing.T to ensure this is a test and not real code</span>
-<span id="L25" class="ln">    25  </span>	t.Log(&#34;Setting up exiter&#34;)
-<span id="L26" class="ln">    26  </span>	exiter = func(code int) {
-<span id="L27" class="ln">    27  </span>		panic(errors.Errorf(&#34;Attempted to exit with exit code %d&#34;, code))
-<span id="L28" class="ln">    28  </span>	}
-<span id="L29" class="ln">    29  </span>}
-<span id="L30" class="ln">    30  </span>
+<span id="L22" class="ln">    22  </span><span class="comment">// Exit runs os.Exit(). If SetupTestExiter() has been called, it panics instead.</span>
+<span id="L23" class="ln">    23  </span>func Exit(code int) {
+<span id="L24" class="ln">    24  </span>	exiter(code)
+<span id="L25" class="ln">    25  </span>}
+<span id="L26" class="ln">    26  </span>
+<span id="L27" class="ln">    27  </span><span class="comment">// SetupTestExiter changes the exiter to panic instead of exiting</span>
+<span id="L28" class="ln">    28  </span>func SetupTestExiter(t *testing.T) {
+<span id="L29" class="ln">    29  </span>	<span class="comment">// require testing.T to ensure this is a test and not real code</span>
+<span id="L30" class="ln">    30  </span>	t.Log(&#34;Setting up exiter&#34;)
+<span id="L31" class="ln">    31  </span>	setupExiterOnce.Do(func() {
+<span id="L32" class="ln">    32  </span>		exiter = func(code int) {
+<span id="L33" class="ln">    33  </span>			panic(errors.Errorf(&#34;Attempted to exit with exit code %d&#34;, code))
+<span id="L34" class="ln">    34  </span>		}
+<span id="L35" class="ln">    35  </span>	})
+<span id="L36" class="ln">    36  </span>}
+<span id="L37" class="ln">    37  </span>
 </pre><p></p>
 
 <div id="footer">
