--- a/gopages/src/github.com/johnstarich/go/gopages/cmd/gendoc/wrap_test.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/cmd/gendoc/wrap_test.go.html
@@ -64,86 +64,89 @@
 <span id="L7" class="ln">     7  </span>)
 <span id="L8" class="ln">     8  </span>
 <span id="L9" class="ln">     9  </span>func TestWordWrapLines(t *testing.T) {
-<span id="L10" class="ln">    10  </span>	const wrapColumn = 20
-<span id="L11" class="ln">    11  </span>	for _, tc := range []struct {
-<span id="L12" class="ln">    12  </span>		description string
-<span id="L13" class="ln">    13  </span>		input       string
-<span id="L14" class="ln">    14  </span>		expect      string
-<span id="L15" class="ln">    15  </span>	}{
-<span id="L16" class="ln">    16  </span>		{
-<span id="L17" class="ln">    17  </span>			description: &#34;empty string&#34;,
-<span id="L18" class="ln">    18  </span>		},
-<span id="L19" class="ln">    19  </span>		{
-<span id="L20" class="ln">    20  </span>			description: &#34;one long line&#34;,
-<span id="L21" class="ln">    21  </span>			input:       &#34;This line is pretty darn long.&#34;,
-<span id="L22" class="ln">    22  </span>			expect:      &#34;This line is pretty\ndarn long.&#34;,
-<span id="L23" class="ln">    23  </span>		},
-<span id="L24" class="ln">    24  </span>		{
-<span id="L25" class="ln">    25  </span>			description: &#34;two long lines&#34;,
-<span id="L26" class="ln">    26  </span>			input: `
-<span id="L27" class="ln">    27  </span>This line is pretty darn long.
-<span id="L28" class="ln">    28  </span>This one might be too, lots of text.
-<span id="L29" class="ln">    29  </span>			`,
-<span id="L30" class="ln">    30  </span>			expect: `
-<span id="L31" class="ln">    31  </span>This line is pretty
-<span id="L32" class="ln">    32  </span>darn long.
-<span id="L33" class="ln">    33  </span>This one might be
-<span id="L34" class="ln">    34  </span>too, lots of text.
-<span id="L35" class="ln">    35  </span>			`,
-<span id="L36" class="ln">    36  </span>		},
-<span id="L37" class="ln">    37  </span>		{
-<span id="L38" class="ln">    38  </span>			description: &#34;wrap indented lines&#34;,
-<span id="L39" class="ln">    39  </span>			input: `
-<span id="L40" class="ln">    40  </span>This line is just adequate.
-<span id="L41" class="ln">    41  </span>	This line is pretty darn long.
-<span id="L42" class="ln">    42  </span>		This one might be too, lots of text.
-<span id="L43" class="ln">    43  </span>			`,
-<span id="L44" class="ln">    44  </span>			expect: `
-<span id="L45" class="ln">    45  </span>This line is just
-<span id="L46" class="ln">    46  </span>adequate.
-<span id="L47" class="ln">    47  </span>	This line is pretty
-<span id="L48" class="ln">    48  </span>	darn long.
-<span id="L49" class="ln">    49  </span>		This one might be
-<span id="L50" class="ln">    50  </span>		too, lots of text.
-<span id="L51" class="ln">    51  </span>			`,
-<span id="L52" class="ln">    52  </span>		},
-<span id="L53" class="ln">    53  </span>		{
-<span id="L54" class="ln">    54  </span>			description: &#34;don&#39;t wrap long words&#34;,
-<span id="L55" class="ln">    55  </span>			input: `
-<span id="L56" class="ln">    56  </span>Super-hyphenated-yet-no-less-amazing.
-<span id="L57" class="ln">    57  </span>			`,
-<span id="L58" class="ln">    58  </span>			expect: `
-<span id="L59" class="ln">    59  </span>Super-hyphenated-yet-no-less-amazing.
-<span id="L60" class="ln">    60  </span>			`,
-<span id="L61" class="ln">    61  </span>		},
-<span id="L62" class="ln">    62  </span>		{
-<span id="L63" class="ln">    63  </span>			description: &#34;best effort string quote wrapping - leader is long enough&#34;,
-<span id="L64" class="ln">    64  </span>			input: `
-<span id="L65" class="ln">    65  </span>This little &#34;phrase will&#34; not be broken.
-<span id="L66" class="ln">    66  </span>			`,
-<span id="L67" class="ln">    67  </span>			expect: `
-<span id="L68" class="ln">    68  </span>This little 
-<span id="L69" class="ln">    69  </span>&#34;phrase will&#34; not
-<span id="L70" class="ln">    70  </span>be broken.
-<span id="L71" class="ln">    71  </span>			`,
-<span id="L72" class="ln">    72  </span>		},
-<span id="L73" class="ln">    73  </span>		{
-<span id="L74" class="ln">    74  </span>			description: &#34;best effort string quote wrapping - leader too short alone&#34;,
-<span id="L75" class="ln">    75  </span>			input: `
-<span id="L76" class="ln">    76  </span>This &#34;phrase with multiple words&#34; must not be broken.
-<span id="L77" class="ln">    77  </span>			`,
-<span id="L78" class="ln">    78  </span>			expect: `
-<span id="L79" class="ln">    79  </span>This &#34;phrase with multiple words&#34;
-<span id="L80" class="ln">    80  </span>must not be broken.
-<span id="L81" class="ln">    81  </span>			`,
-<span id="L82" class="ln">    82  </span>		},
-<span id="L83" class="ln">    83  </span>	} {
-<span id="L84" class="ln">    84  </span>		t.Run(tc.description, func(t *testing.T) {
-<span id="L85" class="ln">    85  </span>			assert.Equal(t, tc.expect, wordWrapLines(wrapColumn, tc.input))
-<span id="L86" class="ln">    86  </span>		})
-<span id="L87" class="ln">    87  </span>	}
-<span id="L88" class="ln">    88  </span>}
-<span id="L89" class="ln">    89  </span>
+<span id="L10" class="ln">    10  </span>	t.Parallel()
+<span id="L11" class="ln">    11  </span>	const wrapColumn = 20
+<span id="L12" class="ln">    12  </span>	for _, tc := range []struct {
+<span id="L13" class="ln">    13  </span>		description string
+<span id="L14" class="ln">    14  </span>		input       string
+<span id="L15" class="ln">    15  </span>		expect      string
+<span id="L16" class="ln">    16  </span>	}{
+<span id="L17" class="ln">    17  </span>		{
+<span id="L18" class="ln">    18  </span>			description: &#34;empty string&#34;,
+<span id="L19" class="ln">    19  </span>		},
+<span id="L20" class="ln">    20  </span>		{
+<span id="L21" class="ln">    21  </span>			description: &#34;one long line&#34;,
+<span id="L22" class="ln">    22  </span>			input:       &#34;This line is pretty darn long.&#34;,
+<span id="L23" class="ln">    23  </span>			expect:      &#34;This line is pretty\ndarn long.&#34;,
+<span id="L24" class="ln">    24  </span>		},
+<span id="L25" class="ln">    25  </span>		{
+<span id="L26" class="ln">    26  </span>			description: &#34;two long lines&#34;,
+<span id="L27" class="ln">    27  </span>			input: `
+<span id="L28" class="ln">    28  </span>This line is pretty darn long.
+<span id="L29" class="ln">    29  </span>This one might be too, lots of text.
+<span id="L30" class="ln">    30  </span>			`,
+<span id="L31" class="ln">    31  </span>			expect: `
+<span id="L32" class="ln">    32  </span>This line is pretty
+<span id="L33" class="ln">    33  </span>darn long.
+<span id="L34" class="ln">    34  </span>This one might be
+<span id="L35" class="ln">    35  </span>too, lots of text.
+<span id="L36" class="ln">    36  </span>			`,
+<span id="L37" class="ln">    37  </span>		},
+<span id="L38" class="ln">    38  </span>		{
+<span id="L39" class="ln">    39  </span>			description: &#34;wrap indented lines&#34;,
+<span id="L40" class="ln">    40  </span>			input: `
+<span id="L41" class="ln">    41  </span>This line is just adequate.
+<span id="L42" class="ln">    42  </span>	This line is pretty darn long.
+<span id="L43" class="ln">    43  </span>		This one might be too, lots of text.
+<span id="L44" class="ln">    44  </span>			`,
+<span id="L45" class="ln">    45  </span>			expect: `
+<span id="L46" class="ln">    46  </span>This line is just
+<span id="L47" class="ln">    47  </span>adequate.
+<span id="L48" class="ln">    48  </span>	This line is pretty
+<span id="L49" class="ln">    49  </span>	darn long.
+<span id="L50" class="ln">    50  </span>		This one might be
+<span id="L51" class="ln">    51  </span>		too, lots of text.
+<span id="L52" class="ln">    52  </span>			`,
+<span id="L53" class="ln">    53  </span>		},
+<span id="L54" class="ln">    54  </span>		{
+<span id="L55" class="ln">    55  </span>			description: &#34;don&#39;t wrap long words&#34;,
+<span id="L56" class="ln">    56  </span>			input: `
+<span id="L57" class="ln">    57  </span>Super-hyphenated-yet-no-less-amazing.
+<span id="L58" class="ln">    58  </span>			`,
+<span id="L59" class="ln">    59  </span>			expect: `
+<span id="L60" class="ln">    60  </span>Super-hyphenated-yet-no-less-amazing.
+<span id="L61" class="ln">    61  </span>			`,
+<span id="L62" class="ln">    62  </span>		},
+<span id="L63" class="ln">    63  </span>		{
+<span id="L64" class="ln">    64  </span>			description: &#34;best effort string quote wrapping - leader is long enough&#34;,
+<span id="L65" class="ln">    65  </span>			input: `
+<span id="L66" class="ln">    66  </span>This little &#34;phrase will&#34; not be broken.
+<span id="L67" class="ln">    67  </span>			`,
+<span id="L68" class="ln">    68  </span>			expect: `
+<span id="L69" class="ln">    69  </span>This little 
+<span id="L70" class="ln">    70  </span>&#34;phrase will&#34; not
+<span id="L71" class="ln">    71  </span>be broken.
+<span id="L72" class="ln">    72  </span>			`,
+<span id="L73" class="ln">    73  </span>		},
+<span id="L74" class="ln">    74  </span>		{
+<span id="L75" class="ln">    75  </span>			description: &#34;best effort string quote wrapping - leader too short alone&#34;,
+<span id="L76" class="ln">    76  </span>			input: `
+<span id="L77" class="ln">    77  </span>This &#34;phrase with multiple words&#34; must not be broken.
+<span id="L78" class="ln">    78  </span>			`,
+<span id="L79" class="ln">    79  </span>			expect: `
+<span id="L80" class="ln">    80  </span>This &#34;phrase with multiple words&#34;
+<span id="L81" class="ln">    81  </span>must not be broken.
+<span id="L82" class="ln">    82  </span>			`,
+<span id="L83" class="ln">    83  </span>		},
+<span id="L84" class="ln">    84  </span>	} {
+<span id="L85" class="ln">    85  </span>		tc := tc <span class="comment">// enable parallel sub-tests</span>
+<span id="L86" class="ln">    86  </span>		t.Run(tc.description, func(t *testing.T) {
+<span id="L87" class="ln">    87  </span>			t.Parallel()
+<span id="L88" class="ln">    88  </span>			assert.Equal(t, tc.expect, wordWrapLines(wrapColumn, tc.input))
+<span id="L89" class="ln">    89  </span>		})
+<span id="L90" class="ln">    90  </span>	}
+<span id="L91" class="ln">    91  </span>}
+<span id="L92" class="ln">    92  </span>
 </pre><p></p>
 
 <div id="footer">
