--- a/gopages/src/github.com/johnstarich/go/gopages/internal/flags/flags_test.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/flags/flags_test.go.html
@@ -66,41 +66,45 @@
 <span id="L9" class="ln">     9  </span>)
 <span id="L10" class="ln">    10  </span>
 <span id="L11" class="ln">    11  </span>func TestParse(t *testing.T) {
-<span id="L12" class="ln">    12  </span>	args, output, err := Parse(&#34;-help&#34;)
-<span id="L13" class="ln">    13  </span>	assert.Equal(t, Args{
-<span id="L14" class="ln">    14  </span>		OutputPath: &#34;dist&#34;,
-<span id="L15" class="ln">    15  </span>	}, args)
-<span id="L16" class="ln">    16  </span>	assert.NotEmpty(t, output)
-<span id="L17" class="ln">    17  </span>	assert.Equal(t, flag.ErrHelp, err)
-<span id="L18" class="ln">    18  </span>}
-<span id="L19" class="ln">    19  </span>
-<span id="L20" class="ln">    20  </span>func TestArgsLinker(t *testing.T) {
-<span id="L21" class="ln">    21  </span>	const someBaseURL = &#34;/some/base&#34;
-<span id="L22" class="ln">    22  </span>
-<span id="L23" class="ln">    23  </span>	t.Run(&#34;default behavior - no template provided&#34;, func(t *testing.T) {
-<span id="L24" class="ln">    24  </span>		args := Args{
-<span id="L25" class="ln">    25  </span>			BaseURL:            someBaseURL,
-<span id="L26" class="ln">    26  </span>			SourceLinkTemplate: &#34;&#34;,
-<span id="L27" class="ln">    27  </span>		}
-<span id="L28" class="ln">    28  </span>		linker, err := args.Linker(&#34;not used&#34;)
-<span id="L29" class="ln">    29  </span>		require.NoError(t, err)
-<span id="L30" class="ln">    30  </span>		assert.Equal(t, newGoPagesLinker(someBaseURL), linker)
-<span id="L31" class="ln">    31  </span>	})
-<span id="L32" class="ln">    32  </span>
-<span id="L33" class="ln">    33  </span>	t.Run(&#34;link template provided&#34;, func(t *testing.T) {
-<span id="L34" class="ln">    34  </span>		const someModulePackage = &#34;github.com/org/repo&#34;
-<span id="L35" class="ln">    35  </span>		args := Args{
-<span id="L36" class="ln">    36  </span>			BaseURL:            someBaseURL,
-<span id="L37" class="ln">    37  </span>			SourceLinkTemplate: &#34;{{.Path}}#L{{.Line}}&#34;,
-<span id="L38" class="ln">    38  </span>		}
-<span id="L39" class="ln">    39  </span>		linker, err := args.Linker(someModulePackage)
-<span id="L40" class="ln">    40  </span>		require.NoError(t, err)
-<span id="L41" class="ln">    41  </span>		expectLinker, err := newTemplateLinker(someModulePackage, args.SourceLinkTemplate)
-<span id="L42" class="ln">    42  </span>		require.NoError(t, err)
-<span id="L43" class="ln">    43  </span>		assert.Equal(t, expectLinker, linker)
-<span id="L44" class="ln">    44  </span>	})
-<span id="L45" class="ln">    45  </span>}
-<span id="L46" class="ln">    46  </span>
+<span id="L12" class="ln">    12  </span>	t.Parallel()
+<span id="L13" class="ln">    13  </span>	args, output, err := Parse(&#34;-help&#34;)
+<span id="L14" class="ln">    14  </span>	assert.Equal(t, Args{
+<span id="L15" class="ln">    15  </span>		OutputPath: &#34;dist&#34;,
+<span id="L16" class="ln">    16  </span>	}, args)
+<span id="L17" class="ln">    17  </span>	assert.NotEmpty(t, output)
+<span id="L18" class="ln">    18  </span>	assert.Equal(t, flag.ErrHelp, err)
+<span id="L19" class="ln">    19  </span>}
+<span id="L20" class="ln">    20  </span>
+<span id="L21" class="ln">    21  </span>func TestArgsLinker(t *testing.T) {
+<span id="L22" class="ln">    22  </span>	t.Parallel()
+<span id="L23" class="ln">    23  </span>	const someBaseURL = &#34;/some/base&#34;
+<span id="L24" class="ln">    24  </span>
+<span id="L25" class="ln">    25  </span>	t.Run(&#34;default behavior - no template provided&#34;, func(t *testing.T) {
+<span id="L26" class="ln">    26  </span>		t.Parallel()
+<span id="L27" class="ln">    27  </span>		args := Args{
+<span id="L28" class="ln">    28  </span>			BaseURL:            someBaseURL,
+<span id="L29" class="ln">    29  </span>			SourceLinkTemplate: &#34;&#34;,
+<span id="L30" class="ln">    30  </span>		}
+<span id="L31" class="ln">    31  </span>		linker, err := args.Linker(&#34;not used&#34;)
+<span id="L32" class="ln">    32  </span>		require.NoError(t, err)
+<span id="L33" class="ln">    33  </span>		assert.Equal(t, newGoPagesLinker(someBaseURL), linker)
+<span id="L34" class="ln">    34  </span>	})
+<span id="L35" class="ln">    35  </span>
+<span id="L36" class="ln">    36  </span>	t.Run(&#34;link template provided&#34;, func(t *testing.T) {
+<span id="L37" class="ln">    37  </span>		t.Parallel()
+<span id="L38" class="ln">    38  </span>		const someModulePackage = &#34;github.com/org/repo&#34;
+<span id="L39" class="ln">    39  </span>		args := Args{
+<span id="L40" class="ln">    40  </span>			BaseURL:            someBaseURL,
+<span id="L41" class="ln">    41  </span>			SourceLinkTemplate: &#34;{{.Path}}#L{{.Line}}&#34;,
+<span id="L42" class="ln">    42  </span>		}
+<span id="L43" class="ln">    43  </span>		linker, err := args.Linker(someModulePackage)
+<span id="L44" class="ln">    44  </span>		require.NoError(t, err)
+<span id="L45" class="ln">    45  </span>		expectLinker, err := newTemplateLinker(someModulePackage, args.SourceLinkTemplate)
+<span id="L46" class="ln">    46  </span>		require.NoError(t, err)
+<span id="L47" class="ln">    47  </span>		assert.Equal(t, expectLinker, linker)
+<span id="L48" class="ln">    48  </span>	})
+<span id="L49" class="ln">    49  </span>}
+<span id="L50" class="ln">    50  </span>
 </pre><p></p>
 
 <div id="footer">
