--- a/gopages/src/github.com/johnstarich/go/gopages/internal/generate/generate_test.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/generate/generate_test.go.html
@@ -72,7 +72,7 @@
 <span id="L15" class="ln">    15  </span>	&#34;github.com/stretchr/testify/require&#34;
 <span id="L16" class="ln">    16  </span>)
 <span id="L17" class="ln">    17  </span>
-<span id="L18" class="ln">    18  </span>func TestGenerateDocs(t *testing.T) {
+<span id="L18" class="ln">    18  </span>func TestGenerateDocs(t *testing.T) { <span class="comment">// nolint:paralleltest // TODO: Remove chdir, use a io/fs.FS implementation to work around billy&#39;s limitations.</span>
 <span id="L19" class="ln">    19  </span>	<span class="comment">// create a new package &#34;thing&#34; and generate docs for it</span>
 <span id="L20" class="ln">    20  </span>	thing, err := ioutil.TempDir(&#34;&#34;, &#34;&#34;)
 <span id="L21" class="ln">    21  </span>	require.NoError(t, err)
