--- a/pipe/src/github.com/johnstarich/go/pipe/error_test.go.html
+++ b/pipe/src/github.com/johnstarich/go/pipe/error_test.go.html
@@ -66,110 +66,114 @@
 <span id="L9" class="ln">     9  </span>)
 <span id="L10" class="ln">    10  </span>
 <span id="L11" class="ln">    11  </span>func TestCheckError(t *testing.T) {
-<span id="L12" class="ln">    12  </span>	someErr := fmt.Errorf(&#34;some error&#34;)
-<span id="L13" class="ln">    13  </span>	if CheckError(true, someErr) == nil {
-<span id="L14" class="ln">    14  </span>		t.Error(&#34;Expected an error when cond is true&#34;)
-<span id="L15" class="ln">    15  </span>	}
-<span id="L16" class="ln">    16  </span>
-<span id="L17" class="ln">    17  </span>	if CheckError(false, someErr) != nil {
-<span id="L18" class="ln">    18  </span>		t.Error(&#34;Expected no error when cond is false&#34;)
-<span id="L19" class="ln">    19  </span>	}
-<span id="L20" class="ln">    20  </span>}
-<span id="L21" class="ln">    21  </span>
-<span id="L22" class="ln">    22  </span>func ExampleCheckError() {
-<span id="L23" class="ln">    23  </span>	isPositive := New(Options{}).
-<span id="L24" class="ln">    24  </span>		Append(func(args []interface{}) (int, error) {
-<span id="L25" class="ln">    25  </span>			in, ok := args[0].(int)
-<span id="L26" class="ln">    26  </span>			return in + 1, CheckError(!ok, fmt.Errorf(&#34;not an int&#34;))
-<span id="L27" class="ln">    27  </span>		}).
-<span id="L28" class="ln">    28  </span>		Append(func(x int) bool {
-<span id="L29" class="ln">    29  </span>			return x &gt; 0
-<span id="L30" class="ln">    30  </span>		})
-<span id="L31" class="ln">    31  </span>
-<span id="L32" class="ln">    32  </span>	_, err := isPositive.Do([]interface{}{&#34;some string&#34;})
-<span id="L33" class="ln">    33  </span>	fmt.Println(err)
-<span id="L34" class="ln">    34  </span>	<span class="comment">// Output: pipe: not an int</span>
-<span id="L35" class="ln">    35  </span>}
-<span id="L36" class="ln">    36  </span>
-<span id="L37" class="ln">    37  </span>func TestCheckErrorf(t *testing.T) {
-<span id="L38" class="ln">    38  </span>	err := CheckErrorf(true, &#34;some error %d&#34;, 1)
-<span id="L39" class="ln">    39  </span>	if err == nil {
-<span id="L40" class="ln">    40  </span>		t.Error(&#34;Expected an error when cond is true&#34;)
-<span id="L41" class="ln">    41  </span>	}
-<span id="L42" class="ln">    42  </span>	if err.Error() != &#34;some error 1&#34; {
-<span id="L43" class="ln">    43  </span>		t.Error(&#34;Unexpected error:&#34;, err)
-<span id="L44" class="ln">    44  </span>	}
-<span id="L45" class="ln">    45  </span>
-<span id="L46" class="ln">    46  </span>	if CheckErrorf(false, &#34;some error %d&#34;, 1) != nil {
-<span id="L47" class="ln">    47  </span>		t.Fatal(&#34;Expected no error when cond is false&#34;)
-<span id="L48" class="ln">    48  </span>	}
-<span id="L49" class="ln">    49  </span>}
-<span id="L50" class="ln">    50  </span>
-<span id="L51" class="ln">    51  </span>func TestError(t *testing.T) {
-<span id="L52" class="ln">    52  </span>	e := Error{errs: []error{
-<span id="L53" class="ln">    53  </span>		&amp;os.PathError{Op: &#34;create&#34;, Path: &#34;foo&#34;, Err: os.ErrExist},
-<span id="L54" class="ln">    54  </span>	}}
-<span id="L55" class="ln">    55  </span>
-<span id="L56" class="ln">    56  </span>	if e.Error() != &#34;pipe: create foo: file already exists&#34; {
-<span id="L57" class="ln">    57  </span>		t.Error(&#34;Unexpected single error message:&#34;, e)
-<span id="L58" class="ln">    58  </span>	}
-<span id="L59" class="ln">    59  </span>
-<span id="L60" class="ln">    60  </span>	if !errors.Is(e, e.errs[0]) {
-<span id="L61" class="ln">    61  </span>		t.Error(&#34;errors.Is() must match the first error&#34;)
-<span id="L62" class="ln">    62  </span>	}
-<span id="L63" class="ln">    63  </span>
-<span id="L64" class="ln">    64  </span>	if !errors.Is(e, os.ErrExist) {
-<span id="L65" class="ln">    65  </span>		t.Error(&#34;errors.Is(e, target) must be true when matching child error&#34;)
-<span id="L66" class="ln">    66  </span>	}
-<span id="L67" class="ln">    67  </span>	if errors.Is(e, os.ErrClosed) {
-<span id="L68" class="ln">    68  </span>		t.Error(&#34;errors.Is(e, target) must be false when no matching child error&#34;)
+<span id="L12" class="ln">    12  </span>	t.Parallel()
+<span id="L13" class="ln">    13  </span>	someErr := fmt.Errorf(&#34;some error&#34;)
+<span id="L14" class="ln">    14  </span>	if CheckError(true, someErr) == nil {
+<span id="L15" class="ln">    15  </span>		t.Error(&#34;Expected an error when cond is true&#34;)
+<span id="L16" class="ln">    16  </span>	}
+<span id="L17" class="ln">    17  </span>
+<span id="L18" class="ln">    18  </span>	if CheckError(false, someErr) != nil {
+<span id="L19" class="ln">    19  </span>		t.Error(&#34;Expected no error when cond is false&#34;)
+<span id="L20" class="ln">    20  </span>	}
+<span id="L21" class="ln">    21  </span>}
+<span id="L22" class="ln">    22  </span>
+<span id="L23" class="ln">    23  </span>func ExampleCheckError() {
+<span id="L24" class="ln">    24  </span>	isPositive := New(Options{}).
+<span id="L25" class="ln">    25  </span>		Append(func(args []interface{}) (int, error) {
+<span id="L26" class="ln">    26  </span>			in, ok := args[0].(int)
+<span id="L27" class="ln">    27  </span>			return in + 1, CheckError(!ok, fmt.Errorf(&#34;not an int&#34;))
+<span id="L28" class="ln">    28  </span>		}).
+<span id="L29" class="ln">    29  </span>		Append(func(x int) bool {
+<span id="L30" class="ln">    30  </span>			return x &gt; 0
+<span id="L31" class="ln">    31  </span>		})
+<span id="L32" class="ln">    32  </span>
+<span id="L33" class="ln">    33  </span>	_, err := isPositive.Do([]interface{}{&#34;some string&#34;})
+<span id="L34" class="ln">    34  </span>	fmt.Println(err)
+<span id="L35" class="ln">    35  </span>	<span class="comment">// Output: pipe: not an int</span>
+<span id="L36" class="ln">    36  </span>}
+<span id="L37" class="ln">    37  </span>
+<span id="L38" class="ln">    38  </span>func TestCheckErrorf(t *testing.T) {
+<span id="L39" class="ln">    39  </span>	t.Parallel()
+<span id="L40" class="ln">    40  </span>	err := CheckErrorf(true, &#34;some error %d&#34;, 1)
+<span id="L41" class="ln">    41  </span>	if err == nil {
+<span id="L42" class="ln">    42  </span>		t.Error(&#34;Expected an error when cond is true&#34;)
+<span id="L43" class="ln">    43  </span>	}
+<span id="L44" class="ln">    44  </span>	if err.Error() != &#34;some error 1&#34; {
+<span id="L45" class="ln">    45  </span>		t.Error(&#34;Unexpected error:&#34;, err)
+<span id="L46" class="ln">    46  </span>	}
+<span id="L47" class="ln">    47  </span>
+<span id="L48" class="ln">    48  </span>	if CheckErrorf(false, &#34;some error %d&#34;, 1) != nil {
+<span id="L49" class="ln">    49  </span>		t.Fatal(&#34;Expected no error when cond is false&#34;)
+<span id="L50" class="ln">    50  </span>	}
+<span id="L51" class="ln">    51  </span>}
+<span id="L52" class="ln">    52  </span>
+<span id="L53" class="ln">    53  </span>func TestError(t *testing.T) {
+<span id="L54" class="ln">    54  </span>	t.Parallel()
+<span id="L55" class="ln">    55  </span>	e := Error{errs: []error{
+<span id="L56" class="ln">    56  </span>		&amp;os.PathError{Op: &#34;create&#34;, Path: &#34;foo&#34;, Err: os.ErrExist},
+<span id="L57" class="ln">    57  </span>	}}
+<span id="L58" class="ln">    58  </span>
+<span id="L59" class="ln">    59  </span>	if e.Error() != &#34;pipe: create foo: file already exists&#34; {
+<span id="L60" class="ln">    60  </span>		t.Error(&#34;Unexpected single error message:&#34;, e)
+<span id="L61" class="ln">    61  </span>	}
+<span id="L62" class="ln">    62  </span>
+<span id="L63" class="ln">    63  </span>	if !errors.Is(e, e.errs[0]) {
+<span id="L64" class="ln">    64  </span>		t.Error(&#34;errors.Is() must match the first error&#34;)
+<span id="L65" class="ln">    65  </span>	}
+<span id="L66" class="ln">    66  </span>
+<span id="L67" class="ln">    67  </span>	if !errors.Is(e, os.ErrExist) {
+<span id="L68" class="ln">    68  </span>		t.Error(&#34;errors.Is(e, target) must be true when matching child error&#34;)
 <span id="L69" class="ln">    69  </span>	}
-<span id="L70" class="ln">    70  </span>
-<span id="L71" class="ln">    71  </span>	var linkErr *os.LinkError
-<span id="L72" class="ln">    72  </span>	if errors.As(e, &amp;linkErr) {
-<span id="L73" class="ln">    73  </span>		t.Error(&#34;errors.As(e, target) must be false when no matching child error&#34;)
-<span id="L74" class="ln">    74  </span>	}
-<span id="L75" class="ln">    75  </span>	var pathErr *os.PathError
-<span id="L76" class="ln">    76  </span>	if !errors.As(e, &amp;pathErr) {
-<span id="L77" class="ln">    77  </span>		t.Error(&#34;errors.As(e, target) must be true when matching child error&#34;)
-<span id="L78" class="ln">    78  </span>	}
-<span id="L79" class="ln">    79  </span>	if !reflect.DeepEqual(pathErr, e.errs[0]) {
-<span id="L80" class="ln">    80  </span>		t.Error(&#34;Path error from errors.As() should be set&#34;)
+<span id="L70" class="ln">    70  </span>	if errors.Is(e, os.ErrClosed) {
+<span id="L71" class="ln">    71  </span>		t.Error(&#34;errors.Is(e, target) must be false when no matching child error&#34;)
+<span id="L72" class="ln">    72  </span>	}
+<span id="L73" class="ln">    73  </span>
+<span id="L74" class="ln">    74  </span>	var linkErr *os.LinkError
+<span id="L75" class="ln">    75  </span>	if errors.As(e, &amp;linkErr) {
+<span id="L76" class="ln">    76  </span>		t.Error(&#34;errors.As(e, target) must be false when no matching child error&#34;)
+<span id="L77" class="ln">    77  </span>	}
+<span id="L78" class="ln">    78  </span>	var pathErr *os.PathError
+<span id="L79" class="ln">    79  </span>	if !errors.As(e, &amp;pathErr) {
+<span id="L80" class="ln">    80  </span>		t.Error(&#34;errors.As(e, target) must be true when matching child error&#34;)
 <span id="L81" class="ln">    81  </span>	}
-<span id="L82" class="ln">    82  </span>}
-<span id="L83" class="ln">    83  </span>
-<span id="L84" class="ln">    84  </span>func TestErrorMulti(t *testing.T) {
-<span id="L85" class="ln">    85  </span>	e := Error{errs: []error{
-<span id="L86" class="ln">    86  </span>		fmt.Errorf(&#34;error 1&#34;),
-<span id="L87" class="ln">    87  </span>		fmt.Errorf(&#34;error 2&#34;),
-<span id="L88" class="ln">    88  </span>		&amp;os.PathError{Op: &#34;create&#34;, Path: &#34;foo&#34;, Err: os.ErrExist},
-<span id="L89" class="ln">    89  </span>	}}
-<span id="L90" class="ln">    90  </span>
-<span id="L91" class="ln">    91  </span>	if expect := &#34;pipe: multiple errors: error 1; error 2; create foo: file already exists&#34;; e.Error() != expect {
-<span id="L92" class="ln">    92  </span>		t.Errorf(&#34;Error() must equal %q, but found: %q&#34;, expect, e.Error())
-<span id="L93" class="ln">    93  </span>	}
+<span id="L82" class="ln">    82  </span>	if !reflect.DeepEqual(pathErr, e.errs[0]) {
+<span id="L83" class="ln">    83  </span>		t.Error(&#34;Path error from errors.As() should be set&#34;)
+<span id="L84" class="ln">    84  </span>	}
+<span id="L85" class="ln">    85  </span>}
+<span id="L86" class="ln">    86  </span>
+<span id="L87" class="ln">    87  </span>func TestErrorMulti(t *testing.T) {
+<span id="L88" class="ln">    88  </span>	t.Parallel()
+<span id="L89" class="ln">    89  </span>	e := Error{errs: []error{
+<span id="L90" class="ln">    90  </span>		fmt.Errorf(&#34;error 1&#34;),
+<span id="L91" class="ln">    91  </span>		fmt.Errorf(&#34;error 2&#34;),
+<span id="L92" class="ln">    92  </span>		&amp;os.PathError{Op: &#34;create&#34;, Path: &#34;foo&#34;, Err: os.ErrExist},
+<span id="L93" class="ln">    93  </span>	}}
 <span id="L94" class="ln">    94  </span>
-<span id="L95" class="ln">    95  </span>	if errors.Unwrap(e) != nil {
-<span id="L96" class="ln">    96  </span>		t.Error(&#34;errors.Unwrap() must return nil for multiple errors&#34;)
+<span id="L95" class="ln">    95  </span>	if expect := &#34;pipe: multiple errors: error 1; error 2; create foo: file already exists&#34;; e.Error() != expect {
+<span id="L96" class="ln">    96  </span>		t.Errorf(&#34;Error() must equal %q, but found: %q&#34;, expect, e.Error())
 <span id="L97" class="ln">    97  </span>	}
 <span id="L98" class="ln">    98  </span>
-<span id="L99" class="ln">    99  </span>	if errors.Is(e, os.ErrExist) {
-<span id="L100" class="ln">   100  </span>		t.Error(&#34;errors.Is(e, target) must be false when matching more than 1 error&#34;)
+<span id="L99" class="ln">    99  </span>	if errors.Unwrap(e) != nil {
+<span id="L100" class="ln">   100  </span>		t.Error(&#34;errors.Unwrap() must return nil for multiple errors&#34;)
 <span id="L101" class="ln">   101  </span>	}
-<span id="L102" class="ln">   102  </span>	if errors.Is(e, os.ErrClosed) {
-<span id="L103" class="ln">   103  </span>		t.Error(&#34;errors.Is(e, target) must be false when matching more than 1 error&#34;)
-<span id="L104" class="ln">   104  </span>	}
-<span id="L105" class="ln">   105  </span>
-<span id="L106" class="ln">   106  </span>	var linkErr *os.LinkError
-<span id="L107" class="ln">   107  </span>	if errors.As(e, &amp;linkErr) {
-<span id="L108" class="ln">   108  </span>		t.Error(&#34;errors.As(e, target) must be false when matching more than 1 error&#34;)
-<span id="L109" class="ln">   109  </span>	}
-<span id="L110" class="ln">   110  </span>	var pathErr *os.PathError
-<span id="L111" class="ln">   111  </span>	if errors.As(e, &amp;pathErr) {
-<span id="L112" class="ln">   112  </span>		t.Error(&#34;errors.As(e, target) false when matching more than 1 error&#34;)
+<span id="L102" class="ln">   102  </span>
+<span id="L103" class="ln">   103  </span>	if errors.Is(e, os.ErrExist) {
+<span id="L104" class="ln">   104  </span>		t.Error(&#34;errors.Is(e, target) must be false when matching more than 1 error&#34;)
+<span id="L105" class="ln">   105  </span>	}
+<span id="L106" class="ln">   106  </span>	if errors.Is(e, os.ErrClosed) {
+<span id="L107" class="ln">   107  </span>		t.Error(&#34;errors.Is(e, target) must be false when matching more than 1 error&#34;)
+<span id="L108" class="ln">   108  </span>	}
+<span id="L109" class="ln">   109  </span>
+<span id="L110" class="ln">   110  </span>	var linkErr *os.LinkError
+<span id="L111" class="ln">   111  </span>	if errors.As(e, &amp;linkErr) {
+<span id="L112" class="ln">   112  </span>		t.Error(&#34;errors.As(e, target) must be false when matching more than 1 error&#34;)
 <span id="L113" class="ln">   113  </span>	}
-<span id="L114" class="ln">   114  </span>}
-<span id="L115" class="ln">   115  </span>
+<span id="L114" class="ln">   114  </span>	var pathErr *os.PathError
+<span id="L115" class="ln">   115  </span>	if errors.As(e, &amp;pathErr) {
+<span id="L116" class="ln">   116  </span>		t.Error(&#34;errors.As(e, target) false when matching more than 1 error&#34;)
+<span id="L117" class="ln">   117  </span>	}
+<span id="L118" class="ln">   118  </span>}
+<span id="L119" class="ln">   119  </span>
 </pre><p></p>
 
 <div id="footer">
