--- a/covet/src/github.com/johnstarich/go/covet/internal/coverfile/file_test.go.html
+++ b/covet/src/github.com/johnstarich/go/covet/internal/coverfile/file_test.go.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <meta name="theme-color" content="#375EAB"/>
 
-  <title>src/github.com/johnstarich/go/covet/chunks_test.go - GoPages</title>
+  <title>src/github.com/johnstarich/go/covet/internal/coverfile/file_test.go - GoPages</title>
 
 <link type="text/css" rel="stylesheet" href="/go/covet/lib/godoc/style.css"/>
 
@@ -38,7 +38,7 @@
 
   <h1>
     Source file
-    <a href="/go/covet/src">src</a>/<a href="/go/covet/src/github.com">github.com</a>/<a href="/go/covet/src/github.com/johnstarich">johnstarich</a>/<a href="/go/covet/src/github.com/johnstarich/go">go</a>/<a href="/go/covet/src/github.com/johnstarich/go/covet">covet</a>/<span class="text-muted">chunks_test.go</span>
+    <a href="/go/covet/src">src</a>/<a href="/go/covet/src/github.com">github.com</a>/<a href="/go/covet/src/github.com/johnstarich">johnstarich</a>/<a href="/go/covet/src/github.com/johnstarich/go">go</a>/<a href="/go/covet/src/github.com/johnstarich/go/covet">covet</a>/<a href="/go/covet/src/github.com/johnstarich/go/covet/internal">internal</a>/<a href="/go/covet/src/github.com/johnstarich/go/covet/internal/coverfile">coverfile</a>/<span class="text-muted">file_test.go</span>
   </h1>
 
 
@@ -46,7 +46,7 @@
 
 
   <h2>
-    Documentation: <a href="/go/covet/pkg/github.com/johnstarich/go/covet">github.com/johnstarich/go/covet</a>
+    Documentation: <a href="/go/covet/pkg/github.com/johnstarich/go/covet/internal/coverfile">github.com/johnstarich/go/covet/internal/coverfile</a>
   </h2>
 
 
@@ -55,7 +55,7 @@
 
 
 <script type="text/javascript">document.ANALYSIS_DATA = null;</script>
-<pre><span id="L1" class="ln">     1  </span>package covet
+<pre><span id="L1" class="ln">     1  </span>package coverfile
 <span id="L2" class="ln">     2  </span>
 <span id="L3" class="ln">     3  </span>import (
 <span id="L4" class="ln">     4  </span>	&#34;strings&#34;
