--- a/covet/src/github.com/johnstarich/go/covet/internal/coverfile/index.html
+++ b/covet/src/github.com/johnstarich/go/covet/internal/coverfile/index.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <meta name="theme-color" content="#375EAB"/>
 
-  <title>src/github.com/johnstarich/go/covet/internal/span/ - GoPages</title>
+  <title>src/github.com/johnstarich/go/covet/internal/coverfile/ - GoPages</title>
 
 <link type="text/css" rel="stylesheet" href="/go/covet/lib/godoc/style.css"/>
 
@@ -38,7 +38,7 @@
 
   <h1>
     Directory
-    <a href="/go/covet/src">src</a>/<a href="/go/covet/src/github.com">github.com</a>/<a href="/go/covet/src/github.com/johnstarich">johnstarich</a>/<a href="/go/covet/src/github.com/johnstarich/go">go</a>/<a href="/go/covet/src/github.com/johnstarich/go/covet">covet</a>/<a href="/go/covet/src/github.com/johnstarich/go/covet/internal">internal</a>/<span class="text-muted">span/</span>
+    <a href="/go/covet/src">src</a>/<a href="/go/covet/src/github.com">github.com</a>/<a href="/go/covet/src/github.com/johnstarich">johnstarich</a>/<a href="/go/covet/src/github.com/johnstarich/go">go</a>/<a href="/go/covet/src/github.com/johnstarich/go/covet">covet</a>/<a href="/go/covet/src/github.com/johnstarich/go/covet/internal">internal</a>/<span class="text-muted">coverfile/</span>
   </h1>
 
 
@@ -46,7 +46,7 @@
 
 
   <h2>
-    Documentation: <a href="/go/covet/pkg/github.com/johnstarich/go/covet/internal/span">github.com/johnstarich/go/covet/internal/span</a>
+    Documentation: <a href="/go/covet/pkg/github.com/johnstarich/go/covet/internal/coverfile">github.com/johnstarich/go/covet/internal/coverfile</a>
   </h2>
 
 
@@ -75,18 +75,18 @@
 
 <tr>
 	
-	<td align="left"><a href="span.go">span.go</a></td>
+	<td align="left"><a href="file.go">file.go</a></td>
 	<td></td>
-	<td align="right">1214</td>
+	<td align="right">3663</td>
 	<td></td>
 	<td align="left">2022-07-18 03:26:24.933649616 +0000 UTC</td>
 </tr>
 
 <tr>
 	
-	<td align="left"><a href="span_test.go">span_test.go</a></td>
+	<td align="left"><a href="file_test.go">file_test.go</a></td>
 	<td></td>
-	<td align="right">2761</td>
+	<td align="right">3280</td>
 	<td></td>
 	<td align="left">2022-07-18 03:26:24.933649616 +0000 UTC</td>
 </tr>
