--- a/covet/src/github.com/johnstarich/go/covet/internal/index.html
+++ b/covet/src/github.com/johnstarich/go/covet/internal/index.html
@@ -75,11 +75,29 @@
 
 <tr>
 	
+	<td align="left"><a href="coverfile/">coverfile/</a></td>
+	<td></td>
+	<td align="right">4096</td>
+	<td></td>
+	<td align="left">2022-07-18 03:26:24.933649616 +0000 UTC</td>
+</tr>
+
+<tr>
+	
+	<td align="left"><a href="coverstatus/">coverstatus/</a></td>
+	<td></td>
+	<td align="right">4096</td>
+	<td></td>
+	<td align="left">2022-07-18 03:26:24.933649616 +0000 UTC</td>
+</tr>
+
+<tr>
+	
 	<td align="left"><a href="fspath/">fspath/</a></td>
 	<td></td>
 	<td align="right">4096</td>
 	<td></td>
-	<td align="left">2022-06-11 23:54:54.181089494 +0000 UTC</td>
+	<td align="left">2022-07-18 03:26:24.933649616 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -88,7 +106,7 @@
 	<td></td>
 	<td align="right">4096</td>
 	<td></td>
-	<td align="left">2022-06-11 23:54:54.181089494 +0000 UTC</td>
+	<td align="left">2022-07-18 03:26:24.933649616 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -97,7 +115,7 @@
 	<td></td>
 	<td align="right">4096</td>
 	<td></td>
-	<td align="left">2022-06-11 23:54:54.181089494 +0000 UTC</td>
+	<td align="left">2022-07-18 03:26:24.933649616 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -106,7 +124,16 @@
 	<td></td>
 	<td align="right">4096</td>
 	<td></td>
-	<td align="left">2022-06-11 23:54:54.181089494 +0000 UTC</td>
+	<td align="left">2022-07-18 03:26:24.933649616 +0000 UTC</td>
+</tr>
+
+<tr>
+	
+	<td align="left"><a href="summary/">summary/</a></td>
+	<td></td>
+	<td align="right">4096</td>
+	<td></td>
+	<td align="left">2022-07-18 03:26:24.933649616 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -115,7 +142,7 @@
 	<td></td>
 	<td align="right">4096</td>
 	<td></td>
-	<td align="left">2022-06-11 23:54:54.181089494 +0000 UTC</td>
+	<td align="left">2022-07-18 03:26:24.933649616 +0000 UTC</td>
 </tr>
 
 
