--- a/covet/src/github.com/johnstarich/go/covet/cmd/covet/github_actions.go.html
+++ b/covet/src/github.com/johnstarich/go/covet/cmd/covet/github_actions.go.html
@@ -63,87 +63,88 @@
 <span id="L6" class="ln">     6  </span>	&#34;sort&#34;
 <span id="L7" class="ln">     7  </span>	&#34;strings&#34;
 <span id="L8" class="ln">     8  </span>
-<span id="L9" class="ln">     9  </span>	&#34;github.com/johnstarich/go/covet/internal/span&#34;
-<span id="L10" class="ln">    10  </span>)
-<span id="L11" class="ln">    11  </span>
-<span id="L12" class="ln">    12  </span>func inGitHubActions() bool { return os.Getenv(&#34;GITHUB_ACTIONS&#34;) == &#34;true&#34; }
-<span id="L13" class="ln">    13  </span>
-<span id="L14" class="ln">    14  </span>func workflowCommand(command, message string, args map[string]string) string {
-<span id="L15" class="ln">    15  </span>	var sb strings.Builder
-<span id="L16" class="ln">    16  </span>	sb.WriteString(&#34;::&#34;)
-<span id="L17" class="ln">    17  </span>	sb.WriteString(command)
-<span id="L18" class="ln">    18  </span>	sb.WriteRune(&#39; &#39;)
-<span id="L19" class="ln">    19  </span>	var argsSlice []string
-<span id="L20" class="ln">    20  </span>	for key, value := range args {
-<span id="L21" class="ln">    21  </span>		key = githubActionsEncode(key)
-<span id="L22" class="ln">    22  </span>		value = githubActionsEncode(value)
-<span id="L23" class="ln">    23  </span>		argsSlice = append(argsSlice, fmt.Sprintf(&#34;%s=%s&#34;, key, value))
-<span id="L24" class="ln">    24  </span>	}
-<span id="L25" class="ln">    25  </span>	sort.Strings(argsSlice)
-<span id="L26" class="ln">    26  </span>
-<span id="L27" class="ln">    27  </span>	for i, arg := range argsSlice {
-<span id="L28" class="ln">    28  </span>		if i != 0 {
-<span id="L29" class="ln">    29  </span>			sb.WriteRune(&#39;,&#39;)
-<span id="L30" class="ln">    30  </span>		}
-<span id="L31" class="ln">    31  </span>		sb.WriteString(arg)
-<span id="L32" class="ln">    32  </span>	}
-<span id="L33" class="ln">    33  </span>	sb.WriteString(&#34;::&#34;)
-<span id="L34" class="ln">    34  </span>	message = githubActionsEncode(message)
-<span id="L35" class="ln">    35  </span>	sb.WriteString(message)
-<span id="L36" class="ln">    36  </span>	return sb.String()
-<span id="L37" class="ln">    37  </span>}
-<span id="L38" class="ln">    38  </span>
-<span id="L39" class="ln">    39  </span><span class="comment">// githubActionsEncode encodes a string for workflow command parameters and values.</span>
-<span id="L40" class="ln">    40  </span><span class="comment">// Mapping guide found here: https://pakstech.com/blog/github-actions-workflow-commands/#what-are-workflow-commands</span>
-<span id="L41" class="ln">    41  </span>func githubActionsEncode(s string) string {
-<span id="L42" class="ln">    42  </span>	var sb strings.Builder
-<span id="L43" class="ln">    43  </span>	for _, r := range s {
-<span id="L44" class="ln">    44  </span>		switch r {
-<span id="L45" class="ln">    45  </span>		case &#39;%&#39;:
-<span id="L46" class="ln">    46  </span>			sb.WriteString(&#34;%25&#34;)
-<span id="L47" class="ln">    47  </span>		case &#39;\r&#39;:
-<span id="L48" class="ln">    48  </span>			sb.WriteString(&#34;%0D&#34;)
-<span id="L49" class="ln">    49  </span>		case &#39;\n&#39;:
-<span id="L50" class="ln">    50  </span>			sb.WriteString(&#34;%0A&#34;)
-<span id="L51" class="ln">    51  </span>		case &#39;:&#39;:
-<span id="L52" class="ln">    52  </span>			sb.WriteString(&#34;%3A&#34;)
-<span id="L53" class="ln">    53  </span>		case &#39;,&#39;:
-<span id="L54" class="ln">    54  </span>			sb.WriteString(&#34;%2C&#34;)
-<span id="L55" class="ln">    55  </span>		default:
-<span id="L56" class="ln">    56  </span>			sb.WriteRune(r)
-<span id="L57" class="ln">    57  </span>		}
-<span id="L58" class="ln">    58  </span>	}
-<span id="L59" class="ln">    59  </span>	return sb.String()
-<span id="L60" class="ln">    60  </span>}
-<span id="L61" class="ln">    61  </span>
-<span id="L62" class="ln">    62  </span>func runWorkflow(s string) {
-<span id="L63" class="ln">    63  </span>	if inGitHubActions() {
-<span id="L64" class="ln">    64  </span>		fmt.Println(s)
-<span id="L65" class="ln">    65  </span>	}
-<span id="L66" class="ln">    66  </span>}
-<span id="L67" class="ln">    67  </span>
-<span id="L68" class="ln">    68  </span>func coverageCommand(percent float64, file string, uncovered []span.Span) string {
-<span id="L69" class="ln">    69  </span>	status := newCoverageStatus(percent)
-<span id="L70" class="ln">    70  </span>	message := fmt.Sprintf(&#34;Diff coverage is %.1f%%&#34;, maxPercentInt*percent)
-<span id="L71" class="ln">    71  </span>	args := map[string]string{
-<span id="L72" class="ln">    72  </span>		&#34;title&#34;: &#34;covet&#34;,
-<span id="L73" class="ln">    73  </span>	}
-<span id="L74" class="ln">    74  </span>	if file != &#34;&#34; {
-<span id="L75" class="ln">    75  </span>		args[&#34;file&#34;] = file
-<span id="L76" class="ln">    76  </span>	}
-<span id="L77" class="ln">    77  </span>	if len(uncovered) &gt; 0 {
-<span id="L78" class="ln">    78  </span>		first := uncovered[0]
-<span id="L79" class="ln">    79  </span>		args[&#34;title&#34;] = fmt.Sprintf(&#34;Not enough tests on %s. (-%.1f%%)&#34;, file, maxPercentInt*(1-percent))
-<span id="L80" class="ln">    80  </span>		args[&#34;line&#34;] = fmt.Sprintf(&#34;%d&#34;, first.Start)
-<span id="L81" class="ln">    81  </span>		args[&#34;endLine&#34;] = fmt.Sprintf(&#34;%d&#34;, first.End-1)
-<span id="L82" class="ln">    82  </span>		message = &#34;&#34;
-<span id="L83" class="ln">    83  </span>		for _, lines := range uncovered {
-<span id="L84" class="ln">    84  </span>			message += fmt.Sprintf(&#34;* %s#L%d-%d\n&#34;, file, lines.Start, lines.End-1)
-<span id="L85" class="ln">    85  </span>		}
-<span id="L86" class="ln">    86  </span>	}
-<span id="L87" class="ln">    87  </span>	return workflowCommand(status.WorkflowCommand(), message, args)
-<span id="L88" class="ln">    88  </span>}
-<span id="L89" class="ln">    89  </span>
+<span id="L9" class="ln">     9  </span>	&#34;github.com/johnstarich/go/covet/internal/coverstatus&#34;
+<span id="L10" class="ln">    10  </span>	&#34;github.com/johnstarich/go/covet/internal/span&#34;
+<span id="L11" class="ln">    11  </span>)
+<span id="L12" class="ln">    12  </span>
+<span id="L13" class="ln">    13  </span>func inGitHubActions() bool { return os.Getenv(&#34;GITHUB_ACTIONS&#34;) == &#34;true&#34; }
+<span id="L14" class="ln">    14  </span>
+<span id="L15" class="ln">    15  </span>func workflowCommand(command, message string, args map[string]string) string {
+<span id="L16" class="ln">    16  </span>	var sb strings.Builder
+<span id="L17" class="ln">    17  </span>	sb.WriteString(&#34;::&#34;)
+<span id="L18" class="ln">    18  </span>	sb.WriteString(command)
+<span id="L19" class="ln">    19  </span>	sb.WriteRune(&#39; &#39;)
+<span id="L20" class="ln">    20  </span>	var argsSlice []string
+<span id="L21" class="ln">    21  </span>	for key, value := range args {
+<span id="L22" class="ln">    22  </span>		key = githubActionsEncode(key)
+<span id="L23" class="ln">    23  </span>		value = githubActionsEncode(value)
+<span id="L24" class="ln">    24  </span>		argsSlice = append(argsSlice, fmt.Sprintf(&#34;%s=%s&#34;, key, value))
+<span id="L25" class="ln">    25  </span>	}
+<span id="L26" class="ln">    26  </span>	sort.Strings(argsSlice)
+<span id="L27" class="ln">    27  </span>
+<span id="L28" class="ln">    28  </span>	for i, arg := range argsSlice {
+<span id="L29" class="ln">    29  </span>		if i != 0 {
+<span id="L30" class="ln">    30  </span>			sb.WriteRune(&#39;,&#39;)
+<span id="L31" class="ln">    31  </span>		}
+<span id="L32" class="ln">    32  </span>		sb.WriteString(arg)
+<span id="L33" class="ln">    33  </span>	}
+<span id="L34" class="ln">    34  </span>	sb.WriteString(&#34;::&#34;)
+<span id="L35" class="ln">    35  </span>	message = githubActionsEncode(message)
+<span id="L36" class="ln">    36  </span>	sb.WriteString(message)
+<span id="L37" class="ln">    37  </span>	return sb.String()
+<span id="L38" class="ln">    38  </span>}
+<span id="L39" class="ln">    39  </span>
+<span id="L40" class="ln">    40  </span><span class="comment">// githubActionsEncode encodes a string for workflow command parameters and values.</span>
+<span id="L41" class="ln">    41  </span><span class="comment">// Mapping guide found here: https://pakstech.com/blog/github-actions-workflow-commands/#what-are-workflow-commands</span>
+<span id="L42" class="ln">    42  </span>func githubActionsEncode(s string) string {
+<span id="L43" class="ln">    43  </span>	var sb strings.Builder
+<span id="L44" class="ln">    44  </span>	for _, r := range s {
+<span id="L45" class="ln">    45  </span>		switch r {
+<span id="L46" class="ln">    46  </span>		case &#39;%&#39;:
+<span id="L47" class="ln">    47  </span>			sb.WriteString(&#34;%25&#34;)
+<span id="L48" class="ln">    48  </span>		case &#39;\r&#39;:
+<span id="L49" class="ln">    49  </span>			sb.WriteString(&#34;%0D&#34;)
+<span id="L50" class="ln">    50  </span>		case &#39;\n&#39;:
+<span id="L51" class="ln">    51  </span>			sb.WriteString(&#34;%0A&#34;)
+<span id="L52" class="ln">    52  </span>		case &#39;:&#39;:
+<span id="L53" class="ln">    53  </span>			sb.WriteString(&#34;%3A&#34;)
+<span id="L54" class="ln">    54  </span>		case &#39;,&#39;:
+<span id="L55" class="ln">    55  </span>			sb.WriteString(&#34;%2C&#34;)
+<span id="L56" class="ln">    56  </span>		default:
+<span id="L57" class="ln">    57  </span>			sb.WriteRune(r)
+<span id="L58" class="ln">    58  </span>		}
+<span id="L59" class="ln">    59  </span>	}
+<span id="L60" class="ln">    60  </span>	return sb.String()
+<span id="L61" class="ln">    61  </span>}
+<span id="L62" class="ln">    62  </span>
+<span id="L63" class="ln">    63  </span>func runWorkflow(s string) {
+<span id="L64" class="ln">    64  </span>	if inGitHubActions() {
+<span id="L65" class="ln">    65  </span>		fmt.Println(s)
+<span id="L66" class="ln">    66  </span>	}
+<span id="L67" class="ln">    67  </span>}
+<span id="L68" class="ln">    68  </span>
+<span id="L69" class="ln">    69  </span>func coverageCommand(percent float64, file string, uncovered []span.Span) string {
+<span id="L70" class="ln">    70  </span>	status := coverstatus.New(percent)
+<span id="L71" class="ln">    71  </span>	message := fmt.Sprintf(&#34;Diff coverage is %.1f%%&#34;, maxPercentInt*percent)
+<span id="L72" class="ln">    72  </span>	args := map[string]string{
+<span id="L73" class="ln">    73  </span>		&#34;title&#34;: &#34;covet&#34;,
+<span id="L74" class="ln">    74  </span>	}
+<span id="L75" class="ln">    75  </span>	if file != &#34;&#34; {
+<span id="L76" class="ln">    76  </span>		args[&#34;file&#34;] = file
+<span id="L77" class="ln">    77  </span>	}
+<span id="L78" class="ln">    78  </span>	if len(uncovered) &gt; 0 {
+<span id="L79" class="ln">    79  </span>		first := uncovered[0]
+<span id="L80" class="ln">    80  </span>		args[&#34;title&#34;] = fmt.Sprintf(&#34;Not enough tests on %s. (-%.1f%%)&#34;, file, maxPercentInt*(1-percent))
+<span id="L81" class="ln">    81  </span>		args[&#34;line&#34;] = fmt.Sprintf(&#34;%d&#34;, first.Start)
+<span id="L82" class="ln">    82  </span>		args[&#34;endLine&#34;] = fmt.Sprintf(&#34;%d&#34;, first.End-1)
+<span id="L83" class="ln">    83  </span>		message = &#34;&#34;
+<span id="L84" class="ln">    84  </span>		for _, lines := range uncovered {
+<span id="L85" class="ln">    85  </span>			message += fmt.Sprintf(&#34;* %s#L%d-%d\n&#34;, file, lines.Start, lines.End-1)
+<span id="L86" class="ln">    86  </span>		}
+<span id="L87" class="ln">    87  </span>	}
+<span id="L88" class="ln">    88  </span>	return workflowCommand(status.WorkflowCommand(), message, args)
+<span id="L89" class="ln">    89  </span>}
+<span id="L90" class="ln">    90  </span>
 </pre><p></p>
 
 <div id="footer">
