--- a/covet/src/github.com/johnstarich/go/covet/index.html
+++ b/covet/src/github.com/johnstarich/go/covet/index.html
@@ -79,25 +79,16 @@
 	<td></td>
 	<td align="right">3160</td>
 	<td></td>
-	<td align="left">2022-06-11 23:54:54.177088205 +0000 UTC</td>
+	<td align="left">2022-07-18 03:26:24.933649616 +0000 UTC</td>
 </tr>
 
 <tr>
 	
 	<td align="left"><a href="chunks.go">chunks.go</a></td>
 	<td></td>
-	<td align="right">3128</td>
+	<td align="right">734</td>
 	<td></td>
-	<td align="left">2022-06-11 23:54:54.177088205 +0000 UTC</td>
-</tr>
-
-<tr>
-	
-	<td align="left"><a href="chunks_test.go">chunks_test.go</a></td>
-	<td></td>
-	<td align="right">3276</td>
-	<td></td>
-	<td align="left">2022-06-11 23:54:54.177088205 +0000 UTC</td>
+	<td align="left">2022-07-18 03:26:24.933649616 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -106,25 +97,25 @@
 	<td></td>
 	<td align="right">4096</td>
 	<td></td>
-	<td align="left">2022-06-11 23:54:54.177088205 +0000 UTC</td>
+	<td align="left">2022-07-18 03:26:24.933649616 +0000 UTC</td>
 </tr>
 
 <tr>
 	
 	<td align="left"><a href="covet.go">covet.go</a></td>
 	<td></td>
-	<td align="right">6982</td>
+	<td align="right">7914</td>
 	<td></td>
-	<td align="left">2022-06-11 23:54:54.181089494 +0000 UTC</td>
+	<td align="left">2022-07-18 03:26:24.933649616 +0000 UTC</td>
 </tr>
 
 <tr>
 	
 	<td align="left"><a href="covet_test.go">covet_test.go</a></td>
 	<td></td>
-	<td align="right">4991</td>
+	<td align="right">5667</td>
 	<td></td>
-	<td align="left">2022-06-11 23:54:54.181089494 +0000 UTC</td>
+	<td align="left">2022-07-18 03:26:24.933649616 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -133,16 +124,16 @@
 	<td></td>
 	<td align="right">461</td>
 	<td></td>
-	<td align="left">2022-06-11 23:54:54.181089494 +0000 UTC</td>
+	<td align="left">2022-07-18 03:26:24.933649616 +0000 UTC</td>
 </tr>
 
 <tr>
 	
 	<td align="left"><a href="go.sum">go.sum</a></td>
 	<td></td>
-	<td align="right">47677</td>
+	<td align="right">47854</td>
 	<td></td>
-	<td align="left">2022-06-11 23:54:54.181089494 +0000 UTC</td>
+	<td align="left">2022-07-18 03:26:24.933649616 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -151,7 +142,25 @@
 	<td></td>
 	<td align="right">4096</td>
 	<td></td>
-	<td align="left">2022-06-11 23:54:54.181089494 +0000 UTC</td>
+	<td align="left">2022-07-18 03:26:24.933649616 +0000 UTC</td>
+</tr>
+
+<tr>
+	
+	<td align="left"><a href="summary.go">summary.go</a></td>
+	<td></td>
+	<td align="right">2674</td>
+	<td></td>
+	<td align="left">2022-07-18 03:26:24.933649616 +0000 UTC</td>
+</tr>
+
+<tr>
+	
+	<td align="left"><a href="summary_test.go">summary_test.go</a></td>
+	<td></td>
+	<td align="right">4961</td>
+	<td></td>
+	<td align="left">2022-07-18 03:26:24.933649616 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -160,7 +169,7 @@
 	<td></td>
 	<td align="right">4096</td>
 	<td></td>
-	<td align="left">2022-06-11 23:54:54.181089494 +0000 UTC</td>
+	<td align="left">2022-07-18 03:26:24.933649616 +0000 UTC</td>
 </tr>
 
 
