--- a/covet/src/github.com/johnstarich/go/covet/internal/testhelpers/fs.go.html
+++ b/covet/src/github.com/johnstarich/go/covet/internal/testhelpers/fs.go.html
@@ -67,7 +67,7 @@
 <span id="L10" class="ln">    10  </span>	&#34;github.com/hack-pad/hackpadfs/mem&#34;
 <span id="L11" class="ln">    11  </span>	&#34;github.com/hack-pad/hackpadfs/mount&#34;
 <span id="L12" class="ln">    12  </span>	&#34;github.com/hack-pad/hackpadfs/os&#34;
-<span id="L13" class="ln">    13  </span>	&#34;github.com/johnstarich/go/covet/internal/fspath&#34;
+<span id="L13" class="ln">    13  </span>	&#34;github.com/stretchr/testify/assert&#34;
 <span id="L14" class="ln">    14  </span>	&#34;github.com/stretchr/testify/require&#34;
 <span id="L15" class="ln">    15  </span>)
 <span id="L16" class="ln">    16  </span>
@@ -80,40 +80,44 @@
 <span id="L23" class="ln">    23  </span>
 <span id="L24" class="ln">    24  </span>	wd, err := goos.Getwd()
 <span id="L25" class="ln">    25  </span>	require.NoError(t, err)
-<span id="L26" class="ln">    26  </span>	wdPath := path.Join(fspath.ToFSPath(wd), relPathToModuleDir)
-<span id="L27" class="ln">    27  </span>	osFS, err := os.NewFS().Sub(wdPath)
+<span id="L26" class="ln">    26  </span>	osFS := os.NewFS()
+<span id="L27" class="ln">    27  </span>	wdFSPath, err := osFS.FromOSPath(wd)
 <span id="L28" class="ln">    28  </span>	require.NoError(t, err)
-<span id="L29" class="ln">    29  </span>
-<span id="L30" class="ln">    30  </span>	memFS, err := mem.NewFS()
-<span id="L31" class="ln">    31  </span>	require.NoError(t, err)
-<span id="L32" class="ln">    32  </span>	fs, err := mount.NewFS(memFS)
-<span id="L33" class="ln">    33  </span>	require.NoError(t, err)
-<span id="L34" class="ln">    34  </span>
-<span id="L35" class="ln">    35  </span>	workingDirectory = &#34;work&#34;
-<span id="L36" class="ln">    36  </span>	require.NoError(t, hackpadfs.MkdirAll(fs, workingDirectory, testDirPermission))
-<span id="L37" class="ln">    37  </span>	require.NoError(t, fs.AddMount(workingDirectory, osFS))
+<span id="L29" class="ln">    29  </span>	wdPath := path.Join(wdFSPath, relPathToModuleDir)
+<span id="L30" class="ln">    30  </span>	if fs, err := osFS.Sub(wdPath); assert.NoError(t, err) {
+<span id="L31" class="ln">    31  </span>		osFS = fs.(*os.FS)
+<span id="L32" class="ln">    32  </span>	}
+<span id="L33" class="ln">    33  </span>
+<span id="L34" class="ln">    34  </span>	memFS, err := mem.NewFS()
+<span id="L35" class="ln">    35  </span>	require.NoError(t, err)
+<span id="L36" class="ln">    36  </span>	fs, err := mount.NewFS(memFS)
+<span id="L37" class="ln">    37  </span>	require.NoError(t, err)
 <span id="L38" class="ln">    38  </span>
-<span id="L39" class="ln">    39  </span>	tempDirectory = &#34;tmp&#34;
-<span id="L40" class="ln">    40  </span>	require.NoError(t, hackpadfs.MkdirAll(fs, tempDirectory, testDirPermission))
-<span id="L41" class="ln">    41  </span>	return fs, workingDirectory, tempDirectory
-<span id="L42" class="ln">    42  </span>}
-<span id="L43" class="ln">    43  </span>
-<span id="L44" class="ln">    44  </span><span class="comment">// FSWithFiles returns an FS with the given files contents generated inside it.</span>
-<span id="L45" class="ln">    45  </span><span class="comment">// The contents are trimmed and a newline appended for convenient comparisons.</span>
-<span id="L46" class="ln">    46  </span>func FSWithFiles(t *testing.T, files map[string]string) hackpadfs.FS {
-<span id="L47" class="ln">    47  </span>	t.Helper()
-<span id="L48" class="ln">    48  </span>	fs, err := mem.NewFS()
-<span id="L49" class="ln">    49  </span>	require.NoError(t, err)
-<span id="L50" class="ln">    50  </span>	for name, contents := range files {
-<span id="L51" class="ln">    51  </span>		require.NoError(t, fs.MkdirAll(path.Dir(name), testDirPermission))
-<span id="L52" class="ln">    52  </span>		f, err := hackpadfs.Create(fs, name)
-<span id="L53" class="ln">    53  </span>		require.NoError(t, err)
-<span id="L54" class="ln">    54  </span>		_, err = hackpadfs.WriteFile(f, []byte(strings.TrimSpace(contents)+&#34;\n&#34;))
-<span id="L55" class="ln">    55  </span>		require.NoError(t, err)
-<span id="L56" class="ln">    56  </span>	}
-<span id="L57" class="ln">    57  </span>	return fs
-<span id="L58" class="ln">    58  </span>}
-<span id="L59" class="ln">    59  </span>
+<span id="L39" class="ln">    39  </span>	workingDirectory = &#34;work&#34;
+<span id="L40" class="ln">    40  </span>	require.NoError(t, hackpadfs.MkdirAll(fs, workingDirectory, testDirPermission))
+<span id="L41" class="ln">    41  </span>	require.NoError(t, fs.AddMount(workingDirectory, osFS))
+<span id="L42" class="ln">    42  </span>
+<span id="L43" class="ln">    43  </span>	tempDirectory = &#34;tmp&#34;
+<span id="L44" class="ln">    44  </span>	require.NoError(t, hackpadfs.MkdirAll(fs, tempDirectory, testDirPermission))
+<span id="L45" class="ln">    45  </span>	return fs, workingDirectory, tempDirectory
+<span id="L46" class="ln">    46  </span>}
+<span id="L47" class="ln">    47  </span>
+<span id="L48" class="ln">    48  </span><span class="comment">// FSWithFiles returns an FS with the given files contents generated inside it.</span>
+<span id="L49" class="ln">    49  </span><span class="comment">// The contents are trimmed and a newline appended for convenient comparisons.</span>
+<span id="L50" class="ln">    50  </span>func FSWithFiles(t *testing.T, files map[string]string) hackpadfs.FS {
+<span id="L51" class="ln">    51  </span>	t.Helper()
+<span id="L52" class="ln">    52  </span>	fs, err := mem.NewFS()
+<span id="L53" class="ln">    53  </span>	require.NoError(t, err)
+<span id="L54" class="ln">    54  </span>	for name, contents := range files {
+<span id="L55" class="ln">    55  </span>		require.NoError(t, fs.MkdirAll(path.Dir(name), testDirPermission))
+<span id="L56" class="ln">    56  </span>		f, err := hackpadfs.Create(fs, name)
+<span id="L57" class="ln">    57  </span>		require.NoError(t, err)
+<span id="L58" class="ln">    58  </span>		_, err = hackpadfs.WriteFile(f, []byte(strings.TrimSpace(contents)+&#34;\n&#34;))
+<span id="L59" class="ln">    59  </span>		require.NoError(t, err)
+<span id="L60" class="ln">    60  </span>	}
+<span id="L61" class="ln">    61  </span>	return fs
+<span id="L62" class="ln">    62  </span>}
+<span id="L63" class="ln">    63  </span>
 </pre><p></p>
 
 <div id="footer">
